Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -2213,7 +2213,7 @@
  desc_rebel_stronghold:0 "反乱軍は、この州を王権に対する抵抗のための強固な要塞としている。"
  great_britain_region:0 "グレートブリテン地方"
  new_model_army:0 "ニューモデル軍"
- desc_new_model_army:0 "武装勢力は、経験豊かな指揮官が率いる常設の専門軍に再編成された。"
+ desc_new_model_army:0 "武装勢力は、経験豊かな指揮官が率いる常設の職業軍に再編成された。"
  vasa_centralization_reforms:0 "集権化改革"
  desc_vasa_centralization_reforms:0 "改革と新たな税金により、地元住民に動揺が広がっている。"
  church_reduction:0 "教会の削減"
@@ -2221,9 +2221,9 @@
  wallon_immigrants:0 "ワロン移民"
  desc_wallon_immigrants:0 "大陸で失業している多くの熟練した鉱山労働者と鉱石精製業者がここに移転してきた。"
  swedish_military_reforms:0 "スウェーデン軍の改革"
- desc_swedish_military_reforms:0 "徴兵制を通じて、専門の軍隊を開発するための、戦術的な技術革新と組織改革である。"
+ desc_swedish_military_reforms:0 "徴兵制を通じて、職業軍を開発するための戦術的な技術革新と組織改革である。"
  swedish_mercenary_core:0 "スウェーデンの傭兵の中核"
- desc_swedish_mercenary_core:0 "熟練した傭兵たちに頼って、専門の軍隊を開発するための戦術的な技術革新と組織改革である。"
+ desc_swedish_mercenary_core:0 "熟練した傭兵たちに頼って、職業軍を開発するための戦術的な技術革新と組織改革である。"
  swedish_naval_reforms:0 "スウェーデン海軍の改革"
  desc_swedish_naval_reforms:0 "徴兵制を通じて、専門の海軍を開発するための、戦術的な技術革新と組織改革である。"
  swedish_mercantile_reforms:0 "重商主義改革"
