--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -6,13 +6,13 @@
  emp_bav_union_with_palatinate_title:0 "ヴィッテルスバッハ家の統一"
  emp_bav_union_with_palatinate_desc:0 "ヴィッテルスバッハ家の分家の数々はバイエルンの国境の向こうにまで及んでいる。その一つはバイエルン・ヴィッテルスバッハ家に疑いなくふさわしい地位である選帝侯位を得ることにより、長きにわたってライン河地方とオーバープファルツに根を張ってきた。この親類一同を再結集し、（皇帝の同意をとりつけると少し説得することで）選帝侯位を我ら自身のものとして要求するのはまったく正当なことだ。"
  emp_bav_union_with_palatinate_effect_tooltip:0 "このミッションを達成すると§Yプファルツ§!に同君連合を強要できます："
- emp_bav_union_with_palatinate_effect_tooltip2:0 "§Y神聖ローマ皇帝§!は§Yプファルツ§!選帝公位を§Y[Root.GetUsableName]§!に返還するかを決断します。"
- emp_bav_union_with_palatinate_effect_tooltip3:0 "\n§Yプファルツ§!が同君連合下に置かれていないなら、"
+ emp_bav_union_with_palatinate_effect_tooltip2:0 "§Y神聖ローマ皇帝§!は§Yプファルツ§!選帝侯位を§Y[Root.GetUsableName]§!に返還するかを決断します。"
+ emp_bav_union_with_palatinate_effect_tooltip3:0 "\n§Yプファルツ§!への同君連合が強制されない場合："
  emp_bav_be_good_at_religion_title:0 "信仰の案内"
  emp_bav_be_good_at_religion_desc:0 "宗教的見解の相違が他の国々を悩ませているが、バイエルンにこのようなものが根付くのを許すべきではない。我々は信仰心と敬虔な行いこそが我が国の礎であり続けるよう配慮しなければならない。"
  emp_bav_be_good_at_religion_reformation_started_tooltip:0 "§Y宗教改革§!が始まってから§Y20§!年以上経っている。"
  emp_bav_center_of_counter_reformation_title:0 "信仰の流布"
- emp_bav_center_of_counter_reformation_desc:0 "我々は、[Root.Religion.GetName]の学習の中心を確立して、そこから我々が影響力を発揮し、隣国に我々と同じような宗教観をもたせるための拠点として機能させるべきである。"
+ emp_bav_center_of_counter_reformation_desc:0 "我々は、[Root.Religion.GetName]の学術の中心地を確立し、そこから我々が影響力を発揮し、隣国に我々と同じような宗教観をもたせるための拠点として機能させるべきである。"
  emp_bav_center_of_counter_reformation_tooltip:0 "隣接した国が§Y異端§!の宗派を信仰していない。"
  emp_bav_center_of_counter_reformation_tooltip2:0 "§Y宗教改革§!が始まってから§Y50§!年以上経っている。"
  emp_bav_conquer_tirol_title:0 "チロルの請求"
@@ -47,7 +47,7 @@
  new_flavour_bav.10.t:0 "プファルツ選帝侯のバイエルンへの移管？"
  new_flavour_bav.10.d:0 "[From.Monarch.GetHerHis]自身によりヴィッテルスバッハ家の所有地を再統一したことで、[From.GetUsableName]の[From.Monarch.GetTitle][From.Monarch.GetName]は選帝侯位に対する[From.Monarch.GetHerHis]の権利が尊重されるよう我々に訴えている。[From.GetUsableName]とプファルツの両方の正当な支配者として、[From.Monarch.GetSheHe]は[From.GetUsableName]の選帝侯位に対する歴史的な主張（[From.Monarch.GetSheHe]が広く吹聴してきた）に従って、選帝侯位がプファルツから[From.GetUsableName]に移されることを要求している。"
  new_flavour_bav.10.d.bav:0 "我々の領土にプファルツ選帝侯の領土を加えたことで、ウィッテルスバッハ家のプファルツに保持していた請求権を自分たちのために主張するのに理想的な瞬間となったようだ。"
- new_flavour_bav.10.a:0 "[From.GetUsableName]選帝侯、万歳！"
+ new_flavour_bav.10.a:0 "[From.GetUsableName]選帝侯万歳！"
  new_flavour_bav.10.a2:0 "そのままにする。"
  new_flavour_bav.10.b:0 "選帝侯位はプファルツに留まるものとする。"
  new_flavour_bav.10.b2:0 "選帝侯は必要ない。"
@@ -58,10 +58,10 @@
  new_flavour_bav.11.b:0 "やめておこう。"
  bav_rising_power:0 "バイエルンの再統合"
  desc_bav_rising_power:0 "我々は強い。新たに統一されたバイエルンは強固な基盤を持ち、その力は年々増している。神聖ローマ帝国最大級の国家を目指すのだ。"
- bav_professional_army:0 "職業軍人から成るバイエルン軍"
- desc_bav_professional_army:0 "我々はバイエルンの国境を守り、拡大することができる、十分に訓練された職業軍人から成る軍隊を創設した。"
- bav_professional_army2:0 "職業軍人から成るバイエルン軍"
- desc_bav_professional_army2:0 "我々はバイエルンの国境を守り、拡大することができる、十分に訓練された職業軍人から成る軍隊を創設した。"
+ bav_professional_army:0 "バイエルンの職業軍"
+ desc_bav_professional_army:0 "我々はバイエルンの国境を守り、拡大することができる、十分に訓練された職業軍を創設した。"
+ bav_professional_army2:0 "バイエルンの職業軍"
+ desc_bav_professional_army2:0 "我々はバイエルンの国境を守り、拡大することができる、十分に訓練された職業軍を創設した。"
  bav_boarisch_als_leitkultur:0 "バイエルンの文化的支配"
  desc_bav_boarisch_als_leitkultur:0 "バイエルンはドイツの経済活動と高度な文化の中心地となっています。"
  bav_italian_coast:0 "バイエルンの航海"
@@ -729,7 +729,7 @@
  bur_english_diplomacy:0 "ブルゴーニュの外交手腕"
  desc_bur_english_diplomacy:0 "我々の議論の余地のない外交能力は、最近の海峡を越えた工作によって強調されている。"
  bur_king_of_franks:0 "フランク人の王"
- desc_bur_king_of_franks:0 "フランスの王位は我々のものだ！ 進もう、より大きな栄光へと！"
+ desc_bur_king_of_franks:0 "フランスの王位は我々のものだ！進もう、より大きな栄光へと！"
  bur_influence_over_princes:0 "帝国の影響者"
  desc_bur_influence_over_princes:0 "我々の外交努力は報われた。我々は今、帝国諸侯の間で大きな影響力を持つ地位を享受している。"
  bur_carolingia:0 "普遍王国"
@@ -754,7 +754,7 @@
  pal_expand_a_bit_title:0 "保有地の拡大"
  pal_expand_a_bit_desc:0 "ラインラントのプファルツの中核領域は、ドイツのこの地域で最大の領土国家の1つである。ただし、他の場所にあるより強力な専制君主に比べると、それらはいくぶんちっぽけである。我々は、帝国の支配的な勢力となることができるよう、我々の保有地を拡大し、我々の勢力を増強しなければならない。"
  pal_connect_oberpfalz_title:0 "アンベルクへの道"
- pal_connect_oberpfalz_desc:0 "我々は東でオーバープファルツと呼ばれる領土を継承している。しかし、それらは我々の他の土地から隔離されている。我々国家の領土保全を確保するため、さらなる征服が必要だ。"
+ pal_connect_oberpfalz_desc:0 "我々は東でオーバープファルツと呼ばれる領土を継承している。しかし、それらは我々の他の土地から隔離されている。我々の国家の領土保全を確保するため、さらなる征服が必要だ。"
  pal_one_true_wittelsbach_title:1 "ヴィッテルスバッハ家の統一"
  pal_one_true_wittelsbach_desc:0 "ヴィッテルスバッハ家の所領は1294年に分割され、本系がプファルツを、支系がバイエルンを獲得した。支系のヴィッテルスバッハ家がそのような肥沃な領土を保持する価値がないことは、統一を維持できなかったことからも明らかだ。我々はこれらの土地に祖先の権利を行使し、自身のためにそれらを奪う必要がある。"
  pal_kingdom_of_the_rhine_title:0 "ライン川の王国"
@@ -763,7 +763,7 @@
  pal_protect_from_france_desc:0 "フランスがドイツへの進出を狙っていることで、我々の領土は彼らの最初の目標の1つになりそうだ。我々は自身の優位性を主張し、我々そして帝国が、西側からの攻撃から安全であることを保証しなければならない。"
  pal_protect_from_france_trigger_tooltip:0 "フランス地方において[Root.GetName]より大きな陸軍を持つ国家がない。"
  pal_religious_leadership_title:0 "宗教的指導力"
- pal_religious_leadership_desc:0 "教皇からのより大きな独立とヨーロッパでのより公正な宗教力の分配を望んでいる人々は、軍事的な指導力を求めている。我々は彼らを失望させてはならない。"
+ pal_religious_leadership_desc:0 "教皇からのより大きな独立とヨーロッパでのより公正な宗教力の分配を望んでいる人々は、我々に軍事的な指導力を求めている。我々は彼らを失望させてはならない。"
  pal_religious_leadership_trigger_tooltip:1 "隣接する国家が§Y[Root.Religion.GetName]§!信仰に従っている。"
  pal_kingdom_of_bohemia_title:0 "ボヘミアの王冠"
  pal_kingdom_of_bohemia_desc:0 "ボヘミアの同調者たちは、もし我々の領土を彼らの領土と統合させれば、オーストリアのハプスブルク家に対して効果的な相殺を示すだろうと示唆している。我々はそれらの計画に基づいて行動し、帝国の覇権を掌握する必要がある。あるいは少なくとも栄光の炎の中で失敗してみるかだ…"
@@ -796,7 +796,7 @@
  desc_bishop_elector_elects_emperor:0 "我が投票は、直近3人の皇帝の身元を示したので、皇帝選挙における先導者と見なされている。"
  opinion_I_like_my_bishop_electors:0 "帝国の寵愛"
  bishop_elector_ecclesiastic_league_title:0 "聖職者同盟"
- bishop_elector_ecclesiastic_league_desc:0 "ケルン、トリーア、マインツの司教選帝侯は、聖職者が帝国の問題において強い発言権を持つことを確実にするため、一つの役割を果たす必要がある。"
+ bishop_elector_ecclesiastic_league_desc:0 "ケルン、トリーア、マインツの司教選帝侯は、聖職者が帝国の問題において強い発言権を持つことを確実にするため、共に行動する必要がある。"
  bishop_elector_ecclesiastic_league:0 "聖職者同盟"
  desc_bishop_elector_ecclesiastic_league:0 "他の司教選帝侯との同盟は、聖職者に帝国政治における強い発言権を与える。"
  bishop_elector_unity_in_faith_title:0 "信仰の統一"
@@ -808,13 +808,13 @@
  kol_consolidate_lands_title:0 "所有地の統合"
  kol_consolidate_lands_desc:0 "我々のヴェストファーレン州はケルンとボンの都市から隔絶している。 我々は領土を拡大し、それらが分断されないようにする必要がある。"
  kol_subdue_munster_title:0 "ミュンスターの征服"
- kol_subdue_munster_desc:0 "ミュンスターの司教は大きな教会の領土を持っている。彼は過去に我々に対しに非常に独立した方針を取っていたが、我々がもし彼の土地を我々の土地に加えることができれば、我々は北ドイツで無視できない勢力となるだろう。"
+ kol_subdue_munster_desc:0 "ミュンスターの司教は大きな教会の領土を持っている。彼は過去に我々に対し非常に独立した方針を取っていたが、我々がもし彼の土地を我々の土地に加えることができれば、我々は北ドイツで無視できない勢力となるだろう。"
  tri_found_the_university_title:0 "トリーア大学の創設"
  tri_found_the_university_desc:0 "我々は、将来の神学者、法学者、医療関係者を訓練し、[Root.GovernmentName]に奉仕するドイツの指導的な知性を引き付けることができる学術の中心地を確立する必要がある。"
  emp_ned_seize_ceylon_title:0 "セイロン島の獲得"
  emp_ned_seize_ceylon_desc:0 "セイロンの豊かな島は、それ自体が収益性の高い収入源であるだけでなく、さらに東へ航行する船の主要な中間地点でもある。我々がそれを手に入れなければ、我々の敵がきっとそうするだろう。"
  emp_ned_found_batavia_title:0 "バタヴィアの創立"
- emp_ned_found_batavia_desc:0 "東インド諸島での我々の存在感が高まるには、近くに統治上の中心地が必要でであり、ここでは、商人を銃で守り、我々の船を安全に埠頭につけることができる。"
+ emp_ned_found_batavia_desc:0 "東インド諸島での我々の存在感を高めるには、近くに統治上の中心地が必要であり、そこでは、商人を銃で守り、我々の船を安全に埠頭につけることができる。"
  emp_ned_conquer_malacca_title:0 "マラッカの征服"
  emp_ned_conquer_malacca_desc:0 "マラッカは東インド諸島の重要な町であり、それが競争相手の手に落ちるのは容認できない。我々はそれを獲得しなければならない！"
  emp_ned_dutch_formosa_title:0 "オランダ領フォルモサ"
@@ -837,7 +837,7 @@
  emp_ned_discover_australia_title:0 "オーストラリアの発見"
  emp_ned_discover_australia_desc:0 "インド諸島での接触は、それらの南にある土地の、腹袋を持つ巨大なネズミや、アヒルのくちばしを持つビーバーといった、奇妙な生き物について語っている。たとえ土地が資源に恵まれていなくても、これは我々自身のために是非とも見なければならないものだ。"
  emp_ned_settle_north_america_title:0 "北アメリカへの定住"
- emp_ned_settle_north_america_desc:0 "アメリカ大陸は、我々が無視するには愚かなほどの多くの有利な商品を生産している。我々が北部で存在を確立することは重要であり、我々はおそらくビーバーの毛皮交易に従事し、原住民とのある種の和解を探ることができるだろう。"
+ emp_ned_settle_north_america_desc:0 "アメリカ大陸は、我々が無視するには愚かなほどの多くの有利な商品を生産している。我々が北部で存在を確立することは重要であり、我々はおそらくビーバーの毛皮交易に従事し、原住民とある種の和解を探ることができるだろう。"
  emp_ned_baltic_bulk_trades_title:0 "一括取引の支援"
  emp_ned_baltic_bulk_trades_desc:1 "バルト海の穀物は伝統的に我々の商人によって西へと運ばれてきたが、我々が利用できる機会はまだたくさんある。我々がバルト海での存在を拡大するのであれば、我々は、事業を行うためにより多くの場所を見出す遠征への資金提供について考え始めるのに十分な金を稼ぐことができるだろう。"
  emp_ned_invest_in_the_rich_trades_title:1 "豊かな交易への投資"
@@ -847,7 +847,7 @@
  emp_ned_explore_caribbean_title:0 "カリブ海の探検"
  emp_ned_explore_caribbean_desc:0 "カリブ海は植民地を設立するのに最適な場所になる可能性がある。我々はまず、そこに何があるかを知る必要がある。"
  emp_ned_colonize_brazil_title:0 "ブラジルの植民地化"
- emp_ned_colonize_brazil_desc:0 "ブラジルは富と不思議の国だ。これらの土地に植民地化すること、あるいは、誰かが我々が関心を持つ土地を誤って植民地化した場合に、これを奪い取ることは賢明であろう。"
+ emp_ned_colonize_brazil_desc:0 "ブラジルは富と不思議の土地だ。これらの土地に植民地化すること、あるいは、誰かが我々が関心を持つ土地を誤って植民地化した場合に、これを奪い取ることは賢明であろう。"
  emp_ned_strengthen_the_vroedschappen_title:0 "市参事会の強化"
  emp_ned_strengthen_the_vroedschappen_desc:0 "控えめな市議会である「vroedschap」は、我々の偉大な政府機構を支えている基盤である。その機嫌を取ることは、国家そのものの機嫌を取ることである。"
  emp_ned_strengthen_the_vroedschappen_tt:1 "の§Y低地諸国§!地方の州が§Y工房§!または§Y会計所§!を持つ。"
@@ -1692,8 +1692,8 @@
  emp_brapru_conquer_pomerania_desc:0 "我々はポメラニア公国の継承権を持っている。我々の主張が忘れられないことを確実にする唯一の方法は、軍事力によって地域を奪取することだ。"
  emp_brapru_connect_the_prussian_lands_title:0 "プロイセンの拡大"
  emp_brapru_connect_the_prussian_lands_desc:0 "ブランデンブルクとプロイセンを統合したことで、我々は今、二等分した領土をどのように守るかという問題に直面している。我々の領域をより防御に適した単位とするためには、現在支配下にある土地だけでなく、プロイセン全体を征服しなければならない。"
- emp_brapru_army_reforms_1_title:0 "精鋭軍"
- emp_brapru_army_reforms_1_desc:0 "我々は、戦場で戦うために傭兵を雇用する慣行から離れなければならない。代わりに、我々は国家のための精鋭の軍隊を確立するだろう。"
+ emp_brapru_army_reforms_1_title:0 "職業軍"
+ emp_brapru_army_reforms_1_desc:0 "我々は、戦場で戦うために傭兵を雇用する慣行から離れなければならない。代わりに、国家のための職業軍を確立するだろう。"
  emp_brapru_renovate_berlin_title:0 "ベルリンの刷新"
  emp_brapru_renovate_berlin_desc:0 "ベルリンの都市は長い間、建築の改修が遅れており、インフラの近代化が急務である。我々は都市の大規模な改善に投資し、その成長を促す必要がある。"
  emp_brapru_army_reforms_2_title:0 "陸軍改革"
