--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -674,7 +674,7 @@
  head_tax:0 "人頭税の施行"
  head_tax_desc:0 "現在、我々は、農民が国家のための務めを提供することを期待しており、これは経済にとって有害で​​ある。我々がそれを廃止し、人頭税に置き換えることで、より多くの人々が貨幣経済に参加することを促すだろう。"
  the_eight_banners:0 "八旗の創設"
- the_eight_banners_desc:0 "専門的な地位にある軍隊を創設することで、我々は国を守ることができる。新たな専門的な軍隊の創設は、我々が国を守ることを可能にし、さらに重要な点は、募兵を正式化する制度を作り出すことである。"
+ the_eight_banners_desc:0 "専門的な常備軍を創設することで、我々は国を守ることができる。新たな職業軍の創設が国家防衛を可能にし、さらに重要な点は、募兵を正式化する制度を作り出すことである。"
  BAV_ideas:0 "バイエルンのアイデア"
  BAV_ideas_start:0 "バイエルンの伝統"
  BAV_ideas_bonus:0 "バイエルンの宿願"
@@ -688,7 +688,7 @@
  geistlicher_rat_desc:0 "ゲリストライヒャー・ラートは、枢密院とは別に、教会の業務のみを取り扱う独立した国家評議会である。この評議会の目標は、聖職者の規律を確保し、唯一の真の信仰を公国全体で促進することである。"
  brewmaster_general:0 "醸造所の親方"
  brewmaster_general_desc:0 "バイエルンの財政を改善するため、我々は強みであるビールの販売を独占する予定である。ビールは最初に公国の仲買人に売却されなければならない。穀物や塩の独占と相まって、ビールの売上は強い収益をもたらすだろう。"
- professional_army:0 "専門的軍隊の創設"
+ professional_army:0 "職業軍の創設"
  professional_army_desc:0 "これに先立ち、バイエルン陸軍は封建制による徴募と傭兵連隊の組み合わせであった。これは簡単にはいかないだろうが、我々の時代の第一級の国々は専門的な軍隊を持保持しており、バイエルンもそうあるべきだ。"
  royal_order_of_st_george:0 "処女懐胎を擁護する聖ゲオルク王立勲章の創設"
  royal_order_of_st_george_desc:1 "ガーター騎士団、金羊毛騎士団など、あらゆる偉大な国家はそれに関連する騎士団を持っているようだ。バイエルンもそうである。それは世界にバイエルンの重要性を示すだけでなく、自領内の騎士道の理想を復活させるための後援や手助けの手段も提供するだろう。"
@@ -770,7 +770,7 @@
  found_the_black_army:0 "黒軍の設立"
  found_the_black_army_desc:0 "ユリウス・カエサルの書に触発され、ハンガリーは軍隊のための専門的な中核部隊を持つことになるだろう。これらの兵士たちは非常に頑強であるため、敵は黒軍の兵士たちを心に焼き付けることになるだろう。"
  reformed_coinage:0 "貨幣制度の改革"
- reformed_coinage_desc:0 "我々の新しい専門軍隊に支払うために、安定した収入が必要である。重さを標準化するために硬貨を改革することで、人々が支払う必要のある量を知ることができるため、これをより簡単にするだろう。"
+ reformed_coinage_desc:0 "新たな職業軍に支払うためには安定した収入が必要である。重さを標準化するために貨幣を改革することで、どれだけの人々が支払う必要があるのか把握できるため、収入の安定化をより簡単にするだろう。"
  curtailed_peasantry:0 "農民の自由の制限"
  curtailed_peasantry_desc:0 "ハンガリーは彼女の防衛の基礎となることができる自然の国境に恵まれていない。我々の祖先たちを最初に連れてきた未開の平原は、防衛のためではなく、西方への襲撃を開始するのに完璧であった。ハンガリーを保護するためには、我々は資源が必要である。もし我々のマグナートが農民を土地にもっと近づけさせることに同意すれば、それは彼らがより懸命に働くことを保証するだろう。"
  strengthened_towns:0 "強化された都市"
@@ -5650,7 +5650,7 @@
  btu_butuan_goldwork:0 "ブトゥアンの金細工"
  btu_butuan_goldwork_desc:0 "我が職人の金細工は、多くの宮廷で名声を得ており、職人の仕事は中国王朝の宝物庫でさえ見られる。多くの外国の支配者はそのような物を持っていると賞賛され、これらの素晴らしい作品は外交のための優れた道具と証明されるであろう。どのような外国の使者やスルタン、王に対して印象を与え癒すように、我々は常にこれら秘蔵の物を蓄え持っていなければならない。"
  btu_balangay:0 "バランガイ"
- btu_balangay_desc:0 "バランガイ、帆船は時代を通じて我ら国民によく役立ってきた。地域内の内陸の川上や多くの島々の海岸沿いを素早く移動することができた。これは、我々国民を優れた造船技師としただけでなく、それら共通の使用はまた早い時代から我ら国民を洗練された水夫とした。影響力が拡大するにつれて、我が集落間の絶え間ないコミュニケーション手段としてバランガイの建造と普及を引き続き奨励すべきだ。"
+ btu_balangay_desc:0 "バランガイ、帆船は時代を通じて我ら国民によく役立ってきた。地域内の内陸の川上や多くの島々の海岸沿いを素早く移動することができた。これは、我々の国民を優れた造船技師としただけでなく、それら共通の使用はまた早い時代から我ら国民を洗練された水夫とした。影響力が拡大するにつれて、我が集落間の絶え間ないコミュニケーション手段としてバランガイの建造と普及を引き続き奨励すべきだ。"
  btu_protect_the_coastlines:0 "海岸線の防衛"
  btu_protect_the_coastlines_desc:0 "富は嫉妬を引きつけ、競争している海洋国家は常に我が海岸線を襲撃し、我が船を攻撃しようと試みた。南方の島々からの凶暴な襲撃に対抗し、国民を守り、彼らの交易より上回るため、我々は強力な海軍力を築かねばならない。"
  btu_long_range_diplomacy:0 "長距離外交"
