--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -1680,11 +1680,11 @@
  CANCEL_FLEETBASING_BTN3:0 "移動"
  NEWMONOTHER_TITLE:0 "新君主"
  NEWMONOTHER_SETUP:0 "他国で新しい君主が誕生した時"
- NEWMONOTHER_HEADER:0 "$TITLE$ $ACTION$!"
+ NEWMONOTHER_HEADER:0 "$TITLE$が$ACTION$！"
  NEWMONOTHER_1:0 "$COUNTRY$からの使者"
  NEWMONOTHER_2:0 "素晴らしい報告です。"
  NEWMONOTHER_3:0 "$FULLMONARCHNAME$"
- NEWMONOTHER_4:0 "$COUNTRY$で$RISE$しました。"
+ NEWMONOTHER_4:0 "が、$COUNTRY$で$RISE$。"
  NEWMONOTHER_5:0 "統治：$ADM$ 外交：$DIP$ 軍事：$MIL$"
  NEWMONOTHER_6:0 "\n彼らの新しい支配者は$PERSONALITY$と言われています。"
  NEWMONOTHER_LOG:0 "$TITLE$ $FULLMONARCHNAME$が$COUNTRY$で$RISE$。"
@@ -3723,7 +3723,7 @@
  OCCUPATIONOVER_TITLE:0 "州の占領"
  OCCUPATIONOVER_SETUP:0 "無防備の州を占領した時"
  OCCUPATIONOVER_HEADER:0 "$MESSENGER$"
- OCCUPATIONOVER_1:0 "$WINNER$は$PROV$を占領しました"
+ OCCUPATIONOVER_1:0 "$WINNER$が$PROV$を占領"
  OCCUPATIONOVER_2:0 "$MONARCHTITLE$、$PROV$は"
  OCCUPATIONOVER_3:0 "$WINNER$の占領下になりました"
  OCCUPATIONOVER_4:0 "$WETHEY$は今、その州を支配しています。"
@@ -3961,91 +3961,91 @@
  CLAIMLOSS_BTN2:0 "OK"
  CLAIMLOSS_BTN3:0 "移動"
  CLAIMLOSS_MAP:0 "我々の失われた国土"
- WARSUBSIDIES_TITLE:0 "資金援助を受け取った"
- WARSUBSIDIES_SETUP:0 "我々が資金援助を与えられた時"
+ WARSUBSIDIES_TITLE:0 "補助金を受け取った"
+ WARSUBSIDIES_SETUP:0 "我々が補助金を与えられた時"
  WARSUBSIDIES_HEADER:0 "$MESSENGER$"
- WARSUBSIDIES_1:0 "資金援助"
+ WARSUBSIDIES_1:0 "補助金"
  WARSUBSIDIES_2:0 "$MONARCHTITLE$、彼ら自身の利益を増進するために"
  WARSUBSIDIES_3:0 "$ACTOR$"
  WARSUBSIDIES_4:0 "資金援助と引き替えに"
  WARSUBSIDIES_5:0 "我々に助けを求めてきました。"
  WARSUBSIDIES_6:0 "我々は$DURATION$年間の間、毎月$VALUE$を受け取ります。"
- WARSUBSIDIES_LOG:0 "我々は$ACTOR$から資金援助を与えられました。"
+ WARSUBSIDIES_LOG:0 "我々は$ACTOR$から補助金を与えられました。"
  WARSUBSIDIES_BTN1:0 "OK"
  WARSUBSIDIES_BTN2:0 "OK"
  WARSUBSIDIES_BTN3:0 "移動"
- WEWARSUBSIDIES_TITLE:0 "資金援助を送った"
- WEWARSUBSIDIES_SETUP:0 "我々が資金援助を送った時"
+ WEWARSUBSIDIES_TITLE:0 "補助金を送った"
+ WEWARSUBSIDIES_SETUP:0 "我々が補助金を送った時"
  WEWARSUBSIDIES_HEADER:0 "$MESSENGER$"
- WEWARSUBSIDIES_1:0 "資金援助"
+ WEWARSUBSIDIES_1:0 "補助金"
  WEWARSUBSIDIES_2:0 "$MONARCHTITLE$、我々の利益を増進するために、"
  WEWARSUBSIDIES_3:0 "$RECIPIENT$"
  WEWARSUBSIDIES_4:0 "資金援助と引き替えに"
  WEWARSUBSIDIES_5:0 "助けを求めることにしました。"
  WEWARSUBSIDIES_6:0 "彼らは$DURATION$年間の間、毎月$VALUE$を受け取ります。"
- WEWARSUBSIDIES_LOG:0 "我々は$RECIPIENT$に資金援助を与えました。"
+ WEWARSUBSIDIES_LOG:0 "我々は$RECIPIENT$に補助金を与えました。"
  WEWARSUBSIDIES_BTN1:0 "OK"
  WEWARSUBSIDIES_BTN2:0 "OK"
  WEWARSUBSIDIES_BTN3:0 "移動"
- OTHERWARSUBSIDIES_TITLE:0 "資金援助を送った"
- OTHERWARSUBSIDIES_SETUP:0 "国家が他国へ資金援助を与える時"
+ OTHERWARSUBSIDIES_TITLE:0 "補助金を送った"
+ OTHERWARSUBSIDIES_SETUP:0 "国家が他国へ補助金を与える時"
  OTHERWARSUBSIDIES_HEADER:0 "$MESSENGER$"
- OTHERWARSUBSIDIES_1:0 "資金援助。"
+ OTHERWARSUBSIDIES_1:0 "補助金"
  OTHERWARSUBSIDIES_2:0 "$MONARCHTITLE$、彼ら自身の利益を増進するために"
  OTHERWARSUBSIDIES_3:0 "$ACTOR$"
  OTHERWARSUBSIDIES_4:0 "$RECIPIENT$から資金援助と引き替えに"
  OTHERWARSUBSIDIES_5:0 "助けを求めることにしました。"
  OTHERWARSUBSIDIES_6:0 "彼らは$DURATION$年間の間、毎月$VALUE$を受け取ります。"
- OTHERWARSUBSIDIES_LOG:0 "$ACTOR$は$RECIPIENT$に資金援助を与えました。"
+ OTHERWARSUBSIDIES_LOG:0 "$ACTOR$は$RECIPIENT$に補助金を与えました。"
  OTHERWARSUBSIDIES_BTN1:0 "OK"
  OTHERWARSUBSIDIES_BTN2:0 "OK"
  OTHERWARSUBSIDIES_BTN3:0 "移動"
- CANCELWARSUBSIDIES_TITLE:0 "資金援助を取り消した"
- CANCELWARSUBSIDIES_SETUP:0 "我々に与えられる資金援助が取り消された時"
+ CANCELWARSUBSIDIES_TITLE:0 "補助金を取り消した"
+ CANCELWARSUBSIDIES_SETUP:0 "我々に与えられる補助金が取り消された時"
  CANCELWARSUBSIDIES_HEADER:0 "使者"
  CANCELWARSUBSIDIES_1:0 "$ACTOR$"
- CANCELWARSUBSIDIES_2:0 "彼らは我々がもはや彼らの利益に関係していないことを我々に知らせるため"
- CANCELWARSUBSIDIES_3:0 "資金援助を"
+ CANCELWARSUBSIDIES_2:0 "彼らは我々がもはや彼らの利益に関係していないことを知らせるため"
+ CANCELWARSUBSIDIES_3:0 "補助金を"
  CANCELWARSUBSIDIES_4:0 "すぐにでも"
  CANCELWARSUBSIDIES_5:0 "取り消します！"
- CANCELWARSUBSIDIES_LOG:0 "$ACTOR$から我々に与えられていた資金援助は取り消されました。"
+ CANCELWARSUBSIDIES_LOG:0 "$ACTOR$から我々に与えられていた補助金は取り消されました。"
  CANCELWARSUBSIDIES_BTN1:0 "OK"
  CANCELWARSUBSIDIES_BTN2:0 "OK"
  CANCELWARSUBSIDIES_BTN3:0 "移動"
- WECANCELWARSUBSIDIES_TITLE:0 "資金援助を取り消した"
- WECANCELWARSUBSIDIES_SETUP:0 "我々が資金援助を取り消した時"
+ WECANCELWARSUBSIDIES_TITLE:0 "補助金を取り消した"
+ WECANCELWARSUBSIDIES_SETUP:0 "我々が補助金を取り消した時"
  WECANCELWARSUBSIDIES_HEADER:0 "$MESSENGER$"
- WECANCELWARSUBSIDIES_1:0 "資金援助を取り消しました。"
- WECANCELWARSUBSIDIES_2:0 "$MONARCHTITLE$、我々の利益を増進するためには、"
+ WECANCELWARSUBSIDIES_1:0 "補助金を取り消しました。"
+ WECANCELWARSUBSIDIES_2:0 "$MONARCHTITLE$、我々の利益を増進するのに"
  WECANCELWARSUBSIDIES_3:0 "$RECIPIENT$"
- WECANCELWARSUBSIDIES_4:0 "もはや関係はなく、我々はすべての金融支援を撤回することにしました。"
- WECANCELWARSUBSIDIES_LOG:0 "我々は$RECIPIENT$への資金援助を取り消しました。"
+ WECANCELWARSUBSIDIES_4:0 "はもはや関係なく、我々はすべての金融支援を撤回することにしました。"
+ WECANCELWARSUBSIDIES_LOG:0 "我々は$RECIPIENT$への補助金を取り消しました。"
  WECANCELWARSUBSIDIES_BTN1:0 "OK"
  WECANCELWARSUBSIDIES_BTN2:0 "OK"
  WECANCELWARSUBSIDIES_BTN3:0 "移動"
- WEENDWARSUBSIDIES_TITLE:0 "我々の資金援助の終了"
- WEENDWARSUBSIDIES_SETUP:0 "我々が期限経過のため資金援助の支払いを停止した時"
+ WEENDWARSUBSIDIES_TITLE:0 "我々の補助金の終了"
+ WEENDWARSUBSIDIES_SETUP:0 "我々が期限経過のため補助金の支払いを停止した時"
  WEENDWARSUBSIDIES_HEADER:0 "$MESSENGER$"
- WEENDWARSUBSIDIES_1:0 "資金援助の期限が切れました。"
- WEENDWARSUBSIDIES_2:0 "$MONARCHTITLE$、"
- WEENDWARSUBSIDIES_3:0 "資金援助を"
- WEENDWARSUBSIDIES_4:0 "貧困国の"
+ WEENDWARSUBSIDIES_1:0 "補助金の期限が切れました。"
+ WEENDWARSUBSIDIES_2:0 "$MONARCHTITLE$、哀れなほど貧しい以下の国に"
+ WEENDWARSUBSIDIES_3:0 "補助金を提供する"
+ WEENDWARSUBSIDIES_4:0 "我々の寛大な合意は期限切れとなりました。"
  WEENDWARSUBSIDIES_5:0 "$RECIPIENT$"
- WEENDWARSUBSIDIES_6:0 "期限が切れました。"
- WEENDWARSUBSIDIES_LOG:0 "$RECIPIENT$への我々の資金援助は期限切れです。"
+ WEENDWARSUBSIDIES_6:0 ""
+ WEENDWARSUBSIDIES_LOG:0 "$RECIPIENT$への我々の補助金は期限切れです。"
  WEENDWARSUBSIDIES_BTN1:0 "OK"
  WEENDWARSUBSIDIES_BTN2:0 "OK"
  WEENDWARSUBSIDIES_BTN3:0 "移動"
- ENDWARSUBSIDIES_TITLE:0 "資金援助の終了"
- ENDWARSUBSIDIES_SETUP:0 "他国が期限経過のため我々への資金援助の支払いを停止した時"
+ ENDWARSUBSIDIES_TITLE:0 "補助金の終了"
+ ENDWARSUBSIDIES_SETUP:0 "他国が期限経過のため我々への補助金の支払いを停止した時"
  ENDWARSUBSIDIES_HEADER:0 "$MESSENGER$"
- ENDWARSUBSIDIES_1:0 "資金援助の期限が切れました。"
+ ENDWARSUBSIDIES_1:0 "補助金の期限が切れました。"
  ENDWARSUBSIDIES_2:0 "$MONARCHTITLE$、"
  ENDWARSUBSIDIES_3:0 "$ACTOR$"
- ENDWARSUBSIDIES_4:0 "資金援助と引き替えに"
+ ENDWARSUBSIDIES_4:0 "補助金と引き替えに"
  ENDWARSUBSIDIES_5:0 "大いに必要な援助を提供する我々の義務は"
  ENDWARSUBSIDIES_6:0 "期限が切れました。"
- ENDWARSUBSIDIES_LOG:0 "$ACTOR$から我々への資金援助は期限切れです。"
+ ENDWARSUBSIDIES_LOG:0 "$ACTOR$から我々への補助金は期限切れです。"
  ENDWARSUBSIDIES_BTN1:0 "OK"
  ENDWARSUBSIDIES_BTN2:0 "OK"
  ENDWARSUBSIDIES_BTN3:0 "移動"
@@ -4055,21 +4055,21 @@
  ENDKNOWLEDGESHARE_1:0 "知識共有は終了します。"
  ENDKNOWLEDGESHARE_2:0 "$MONARCHTITLE$、"
  ENDKNOWLEDGESHARE_3:0 "$ACTOR$"
- ENDKNOWLEDGESHARE_4:0 "の$RECIPIENT$に対する"
+ ENDKNOWLEDGESHARE_4:0 "からの$RECIPIENT$に対する"
  ENDKNOWLEDGESHARE_5:0 "知識共有は終了しました。"
  ENDKNOWLEDGESHARE_6:0 "$REASON$"
- ENDKNOWLEDGESHARE_LOG:0 "$ACTOR$から我々への資金援助の期限が切れました。"
+ ENDKNOWLEDGESHARE_LOG:0 "$ACTOR$から我々への補助金の期限が切れました。"
  ENDKNOWLEDGESHARE_BTN1:0 "OK"
  ENDKNOWLEDGESHARE_BTN2:0 "OK"
  ENDKNOWLEDGESHARE_BTN3:0 "移動"
- OTHERCANCELWARSUBSIDIES_TITLE:0 "資金援助を取り消した"
- OTHERCANCELWARSUBSIDIES_SETUP:0 "国家が他国への資金援助を取り消した時"
+ OTHERCANCELWARSUBSIDIES_TITLE:0 "補助金を取り消した"
+ OTHERCANCELWARSUBSIDIES_SETUP:0 "国家が他国への補助金を取り消した時"
  OTHERCANCELWARSUBSIDIES_HEADER:0 "使者"
  OTHERCANCELWARSUBSIDIES_1:0 "$ACTOR$"
  OTHERCANCELWARSUBSIDIES_2:0 "彼らは、"
  OTHERCANCELWARSUBSIDIES_3:0 "期待が満たされないため、"
- OTHERCANCELWARSUBSIDIES_4:0 "これまでに$RECIPIENT$に提供してきた資金援助を取り消しました。"
- OTHERCANCELWARSUBSIDIES_LOG:0 "$ACTOR$から$RECIPIENT$に与えられていた資金援助は取り消されました。"
+ OTHERCANCELWARSUBSIDIES_4:0 "これまでに$RECIPIENT$に提供してきた補助金を取り消しました。"
+ OTHERCANCELWARSUBSIDIES_LOG:0 "$ACTOR$から$RECIPIENT$に与えられていた補助金は取り消されました。"
  OTHERCANCELWARSUBSIDIES_BTN1:0 "OK"
  OTHERCANCELWARSUBSIDIES_BTN2:0 "OK"
  OTHERCANCELWARSUBSIDIES_BTN3:0 "移動"
@@ -4084,8 +4084,8 @@
  OURTRUCEENDS_BTN1:0 "OK"
  OURTRUCEENDS_BTN2:0 "OK"
  OURTRUCEENDS_BTN3:0 "移動"
- ALLYTAKEOVER_TITLE:0 "統帥国の変更"
- ALLYTAKEOVER_SETUP:0 "同盟国が我々の戦争で統帥国を引き継ぐ時"
+ ALLYTAKEOVER_TITLE:0 "戦争主導国の変更"
+ ALLYTAKEOVER_SETUP:0 "同盟国が我々の戦争で戦争主導国を引き継ぐ時"
  ALLYTAKEOVER_HEADER:0 "使者"
  ALLYTAKEOVER_1:0 "$ACTOR$"
  ALLYTAKEOVER_2:0 "彼らは、"
@@ -4093,12 +4093,12 @@
  ALLYTAKEOVER_4:0 "軍事的専門知識のために、"
  ALLYTAKEOVER_5:0 "$TARGETLIST$"
  ALLYTAKEOVER_6:0 "これから、彼らはすべての交渉を扱います。"
- ALLYTAKEOVER_LOG:0 "$ACTOR$は$TARGETLIST$に対する我々の戦争で統帥国を引継ぎました。"
+ ALLYTAKEOVER_LOG:0 "$ACTOR$は$TARGETLIST$に対する我々の戦争で主導国を引継ぎました。"
  ALLYTAKEOVER_BTN1:0 "OK"
  ALLYTAKEOVER_BTN2:0 "OK"
  ALLYTAKEOVER_BTN3:0 "移動"
- ALLYTAKEOVERWE_TITLE:0 "統帥国の変更"
- ALLYTAKEOVERWE_SETUP:0 "我々が戦争で統帥国を引き継ぐ時"
+ ALLYTAKEOVERWE_TITLE:0 "戦争主導国の変更"
+ ALLYTAKEOVERWE_SETUP:0 "我々が戦争で主導国を引き継ぐ時"
  ALLYTAKEOVERWE_HEADER:0 "$MESSENGER$"
  ALLYTAKEOVERWE_1:0 "我々が統制します。"
  ALLYTAKEOVERWE_2:0 "我々の"
@@ -4106,7 +4106,7 @@
  ALLYTAKEOVERWE_4:0 "比類のないリーダーシップのために、"
  ALLYTAKEOVERWE_5:0 "$TARGETLIST$"
  ALLYTAKEOVERWE_6:0 "これから、我々がすべての交渉を扱います。"
- ALLYTAKEOVERWE_LOG:0 "我々は$TARGETLIST$に対する我々の戦争で統帥国を引継ぎました。"
+ ALLYTAKEOVERWE_LOG:0 "我々は$TARGETLIST$に対する我々の戦争で主導国を引継ぎました。"
  ALLYTAKEOVERWE_BTN1:0 "OK"
  ALLYTAKEOVERWE_BTN2:0 "OK"
  ALLYTAKEOVERWE_BTN3:0 "移動"
@@ -4206,7 +4206,7 @@
  THEYDECLINETHREATENWAR_HEADER:0 "$MESSENGER$"
  THEYDECLINETHREATENWAR_1:0 "武力脅迫を拒否"
  THEYDECLINETHREATENWAR_2:0 "$MONARCHTITLE$、$RECIPIENT$は"
- THEYDECLINETHREATENWAR_3:0 "以下に関する武力脅迫を拒否しました。"
+ THEYDECLINETHREATENWAR_3:0 "以下に関する我々の武力脅迫を拒否しました。"
  THEYDECLINETHREATENWAR_4:0 "$PROVINCE$"
  THEYDECLINETHREATENWAR_5:0 "もはや戦争しかありません！"
  THEYDECLINETHREATENWAR_LOG:0 "$RECIPIENT$は$PROV$に関する武力脅迫を拒否しました"
@@ -4300,7 +4300,7 @@
  NEWMON_AVARAGE:0 "[Root.Monarch.GetHerHisCap]の教師は[Root.Monarch.GetHerHim]を我々の偉大な国家を支配するに足る偉大な[Root.Monarch.GetWomanMan]にすることができなかった。"
  NEWMON_TITLE:0 "新君主"
  NEWMON_SETUP:0 "我々が新しい君主を得た時"
- NEWMON_HEADER:0 "新しい$TITLE$!"
+ NEWMON_HEADER:0 "新しい$TITLE$！"
  NEWMON_1:0 "$FULLMONARCHNAME$"
  NEWMON_2:0 "今、我々の栄光の国を統治します。"
  NEWMON_3:0 "( $ADM$ £adm£ / $DIP$ £dip£ / $MIL$ £mil£ )"
@@ -4343,9 +4343,9 @@
  UNITARRIVED_SETUP:0 "我々のユニットの一つがその目的地に到着した時"
  UNITARRIVED_HEADER:0 "$MESSENGER$"
  UNITARRIVED_1:0 "$TYPE$は到着しました！"
- UNITARRIVED_2:0 "我々の$TYPE$の"
+ UNITARRIVED_2:0 "我々の以下の$TYPE$は"
  UNITARRIVED_3:0 "$NAME$"
- UNITARRIVED_4:0 "無事に"
+ UNITARRIVED_4:0 "無事に到着しました。"
  UNITARRIVED_5:0 "$PROV$"
  UNITARRIVED_6:0 "彼らは命令を待っています。"
  UNITARRIVED_LOG:0 "$NAME$は$PROV$に到着しました。"
@@ -4408,7 +4408,7 @@
  PUABANDON_US_1:0 "$OVERLORD|Y$は"
  PUABANDON_US_2:0 "我々との同君連合を放棄しました。"
  PUABANDON_US_4:0 "我々は彼らなしで"
- PUABANDON_US_5:0 "もっと良くなるでしょう！"
+ PUABANDON_US_5:0 "もっと良いものとなるでしょう！"
  PUABANDON_US_LOG:0 "$OVERLORD$は我々の同君連合を放棄しました。"
  PUABANDON_US_BTN1:0 "OK"
  PUABANDON_US_BTN2:0 "キャンセル"
@@ -4494,7 +4494,7 @@
  LEADER_ARRIVED_BTN2:0 "OK"
  LEADER_ARRIVED_BTN3:0 "詳細"
  MERCHANTSUCCESS_SETUP:0 "あなたの商人が交易ノードであなたの交易を拡大する時"
- MERCHANTSUCCESS_4:0 "交易ノード（交易レベル15を要求）で6人の商人を配置すると、独占権を得て収入を大幅に増やすことになります。"
+ MERCHANTSUCCESS_4:0 "交易ノード（交易レベル15が必要）で6人の商人を配置すると、独占権を得て収入を大幅に増やすことになります。"
  MERCHANTFAIL_SETUP:0 "あなたの商人が交易ノードであなたの交易を拡大できない時"
  MERCWELOOSE_6:0 "その交易ノードで。"
  TRADEREFUSAL_4:0 "我々の商人が彼らの州へアクセスすること。"
@@ -4641,7 +4641,7 @@
  EXCOMREVONUS_HEADER:0 "使者"
  EXCOMREVONUS_1:0 "$ACTOR$"
  EXCOMREVONUS_2:0 "$MONARCHTITLE$、$ACTOR$は"
- EXCOMREVONUS_3:0 "あなたの破門が解除されるように手配しました！"
+ EXCOMREVONUS_3:0 "あなたの破門の解除を手配しました！"
  EXCOMREVONUS_6:0 "カトリック諸国は、もはや通常受ける安定度への打撃なしに、我々に宣戦布告することはできません。"
  EXCOMREVONUS_LOG:0 "$ACTOR$は教皇に我々の支配者の破門を取り消させました。"
  EXCOMREVONUS_BTN1:0 "OK"
@@ -4939,7 +4939,7 @@
  CONSORT_REGENT_TAKEOVER_BTN3:0 "移動"
  CONSORT_REGENT_TAKEOVER_MAP:0 "摂政が権限を担う"
  NEWHEIR_TITLE:0 "新しい後継者"
- NEWHEIR_SETUP:0 "あなたは新しい正当後継者を得る時"
+ NEWHEIR_SETUP:0 "あなたが新しい正当な後継者を得る時"
  NEWHEIR_HEADER:0 "王位継承者！"
  NEWHEIR_1:0 "$HEIRNAME$ $STATS$"
  NEWHEIR_2:0 "は新しい"
@@ -4969,11 +4969,11 @@
  NEWQUEEN_NAME_2:0 "$COUNTRY$は新しい$QUEENPRINCE$を得ました。$PRONOUN$の名は"
  HEIR_DISINHERIT_TITLE:0 "後継者は廃嫡された"
  HEIR_DISINHERIT_SETUP:0 "我々の正当な後継者が廃嫡された時"
- HEIR_DISINHERIT_HEADER:0 "幸運は我々に笑顔を浮かべます！"
+ HEIR_DISINHERIT_HEADER:0 "運命は我々に微笑みます！"
  HEIR_DISINHERIT_1:0 "$HEIRNAME$"
- HEIR_DISINHERIT_2:0 "王位継承ラインから"
+ HEIR_DISINHERIT_2:0 "は王位継承ラインから"
  HEIR_DISINHERIT_3:0 "排除されました。"
- HEIR_DISINHERIT_4:0 "このことは我々に未来の栄華のための新たなチャンスを与えました。"
+ HEIR_DISINHERIT_4:0 "このことは我々に未来の栄華のための新たな機会を与えます。"
  HEIR_DISINHERIT_LOG:0 "我々は$HEIRNAME$を廃嫡しました。"
  HEIR_DISINHERIT_BTN1:0 "OK"
  HEIR_DISINHERIT_BTN2:0 "OK"
@@ -5060,10 +5060,10 @@
  WECLAIM_BTN2:0 "OK"
  WECLAIM_BTN3:0 "移動"
  WEIMPREL_TITLE:0 "関係改善"
- WEIMPREL_SETUP:0 "我々が神聖ローマ皇帝として帝国の諸侯との関係を改善する時"
+ WEIMPREL_SETUP:0 "我々が神聖ローマ皇帝として帝国諸侯との関係を改善する時"
  WEIMPREL_HEADER:0 "$MESSENGER$"
  WEIMPREL_1:0 "皇族関係"
- WEIMPREL_2:0 "$MONARCHTITLE$、我々が"
+ WEIMPREL_2:0 "$MONARCHTITLE$、我々が以下に派遣した外交官は"
  WEIMPREL_3:0 "$RECIPIENT$"
  WEIMPREL_4:0 "我々の関係を$INCDEC$しました。"
  WEIMPREL_5:0 "$CHANGE$"
@@ -5084,12 +5084,12 @@
  IMPRELTOUS_BTN2:0 "OK"
  IMPRELTOUS_BTN3:0 "移動"
  IMPRELTOOTHER_TITLE:0 "関係改善"
- IMPRELTOOTHER_SETUP:0 "神聖ローマ皇帝が帝国の諸侯と関係を改善した時"
+ IMPRELTOOTHER_SETUP:0 "神聖ローマ皇帝が帝国諸侯と関係を改善した時"
  IMPRELTOOTHER_HEADER:0 "使者"
  IMPRELTOOTHER_1:0 "$ACTOR$"
- IMPRELTOOTHER_2:0 "皇帝が"
+ IMPRELTOOTHER_2:0 "皇帝が以下に送った外交官は"
  IMPRELTOOTHER_3:0 "$RECIPIENT$"
- IMPRELTOOTHER_4:0 "相互関係を$INCDEC$しました。"
+ IMPRELTOOTHER_4:0 "彼らの相互関係を$INCDEC$しました。"
  IMPRELTOOTHER_5:0 "$CHANGE$"
  IMPRELTOOTHER_LOG:0 "神聖ローマ皇帝である$ACTOR$は$RECIPIENT$との関係を改善しました。"
  IMPRELTOOTHER_BTN1:0 "OK"
@@ -5140,7 +5140,7 @@
  DECRELUNITYWITHUS_SETUP:0 "他国が我々の宗教統一の要求を拒否した時"
  DECRELUNITYWITHUS_HEADER:0 "使者"
  DECRELUNITYWITHUS_1:0 "$RECIPIENT$"
- DECRELUNITYWITHUS_2:0 "$MONARCHTITLE$、彼らは向こう見ずに"
+ DECRELUNITYWITHUS_2:0 "$MONARCHTITLE$、彼らは向こう見ずにも"
  DECRELUNITYWITHUS_3:0 "我々の宗教統一の要求を"
  DECRELUNITYWITHUS_4:0 "拒否しました。"
  DECRELUNITYWITHUS_LOG:0 "$RECIPIENT$は我々の宗教統一の要求を拒否しました。"
@@ -5227,7 +5227,7 @@
  WE_LOST_ELECTORATE_2:0 "我々の選帝侯位は以下により取り消されました。"
  WE_LOST_ELECTORATE_3:0 "$ACTOR$"
  WE_LOST_ELECTORATE_4:0 "皇帝は悪魔の子であり、"
- WE_LOST_ELECTORATE_5:0 "復讐のための時間が来たときは大きな代償を払うことになるでしょう。"
+ WE_LOST_ELECTORATE_5:0 "復讐の時が来れば大きな代償を払うことになるでしょう。"
  WE_LOST_ELECTORATE_LOG:0 "我々の選帝侯位は$ACTOR$に取り消されました。"
  WE_LOST_ELECTORATE_BTN1:0 "OK"
  WE_LOST_ELECTORATE_BTN2:0 "OK"
@@ -5251,7 +5251,7 @@
  GRANTFREECITYWITHUS_1:0 "$RECIPIENT$"
  GRANTFREECITYWITHUS_2:0 "$MONARCHTITLE$、$RECIPIENT$は"
  GRANTFREECITYWITHUS_3:0 "帝国自由都市になるという我々の提案を受諾しました。"
- GRANTFREECITYWITHUS_4:0 "彼らの権利と権限は今、全てにおいて保証されています。"
+ GRANTFREECITYWITHUS_4:0 "彼らの権利と特権は今、全てにおいて保証されています。"
  GRANTFREECITYWITHUS_LOG:0 "$RECIPIENT$は帝国自由都市になりました。"
  GRANTFREECITYWITHUS_BTN1:0 "OK"
  GRANTFREECITYWITHUS_BTN2:0 "OK"
@@ -5261,7 +5261,7 @@
  WEACCGRANTFREECITY_HEADER:0 "$MESSENGER$"
  WEACCGRANTFREECITY_2:0 "我々は$ACTOR$の提案を受諾し、"
  WEACCGRANTFREECITY_3:0 "帝国自由都市になりました。"
- WEACCGRANTFREECITY_4:0 "我々の権利と権限は今、全てにおいて保証されています。"
+ WEACCGRANTFREECITY_4:0 "我々の権利と特権は今、全てにおいて保証されています。"
  WEACCGRANTFREECITY_LOG:0 "我々は帝国自由都市になる提案を受け入れました。"
  WEACCGRANTFREECITY_BTN1:0 "OK"
  WEACCGRANTFREECITY_BTN2:0 "OK"
@@ -5536,7 +5536,7 @@
  NAVALATTACKUS_3:0 "$PROV$において攻撃を受けています。"
  NAVALATTACKUS_4:0 "臆病な"
  NAVALATTACKUS_5:0 "$ATTACKER$"
- NAVALATTACKUS_6:0 "は$DEFENDER$により海底に沈められるでしょう。"
+ NAVALATTACKUS_6:0 "軍は$DEFENDER$により海底に沈められるでしょう。"
  NAVALATTACKUS_LOG:0 "我々は$PROV$で攻撃を受けています。"
  NAVALATTACKUS_BTN1:0 "OK"
  NAVALATTACKUS_BTN2:0 "OK"
@@ -5620,10 +5620,10 @@
  CELESTIALREFORMBYUS_SETUP:0 "我々は中国の皇帝として改革を実行した時"
  CELESTIALREFORMBYUS_HEADER:0 "$MESSENGER$"
  CELESTIALREFORMBYUS_1:0 "我々は皇帝としての力を誇示してきました！"
- CELESTIALREFORMBYUS_2:0 "$MONARCHTITLE$、我々は政府の改革を実行しました。"
+ CELESTIALREFORMBYUS_2:0 "$MONARCHTITLE$、我々は以下の政府改革を実行し、"
  CELESTIALREFORMBYUS_3:0 "それは、世界で我々の優位性を確保します："
- CELESTIALREFORMBYUS_4:0 "$REFORM$。"
- CELESTIALREFORMBYUS_5:0 "この改革は次のような効果があります："
+ CELESTIALREFORMBYUS_4:0 "$REFORM$"
+ CELESTIALREFORMBYUS_5:0 "この改革は以下の効果があります："
  CELESTIALREFORMBYUS_6:0 "$EFFECT$"
  CELESTIALREFORMBYUS_LOG:0 "我々は中国の皇帝として$REFORM$を実行しました。"
  CELESTIALREFORMBYUS_BTN1:0 "OK"
@@ -5634,9 +5634,9 @@
  CELESTIALREFORM_HEADER:0 "$MESSENGER$"
  CELESTIALREFORM_1:0 "皇帝は帝国の改革を実行しました！"
  CELESTIALREFORM_2:0 "$MONARCHTITLE$、中国の皇帝は、"
- CELESTIALREFORM_3:0 "政府の改革を遂行しました："
- CELESTIALREFORM_4:0 "$REFORM$。"
- CELESTIALREFORM_5:0 "この改革は次のような効果があります："
+ CELESTIALREFORM_3:0 "以下の政府改革を実行しました："
+ CELESTIALREFORM_4:0 "$REFORM$"
+ CELESTIALREFORM_5:0 "この改革は以下の効果があります："
  CELESTIALREFORM_6:0 "$EFFECT$"
  CELESTIALREFORM_LOG:0 "中国の皇帝は$REFORM$を実行しました。"
  CELESTIALREFORM_BTN1:0 "OK"
@@ -5648,8 +5648,8 @@
  HREREFORMBYUS_1:0 "我々は皇帝としての力を誇示しました！"
  HREREFORMBYUS_2:0 "$MONARCHTITLE$、神聖ローマ帝国のメンバーは"
  HREREFORMBYUS_3:0 "改革を遂行するあなたの決断を支持しています："
- HREREFORMBYUS_4:0 "$REFORM$。"
- HREREFORMBYUS_5:0 "この改革は次のような効果があります："
+ HREREFORMBYUS_4:0 "$REFORM$"
+ HREREFORMBYUS_5:0 "この改革は以下の効果があります："
  HREREFORMBYUS_6:0 "$EFFECT$"
  HREREFORMBYUS_LOG:0 "我々は皇帝として$REFORM$を実行しました。"
  HREREFORMBYUS_BTN1:0 "OK"
@@ -5661,8 +5661,8 @@
  HREREFORM_1:0 "皇帝は帝国の改革を実行しました。"
  HREREFORM_2:0 "$MONARCHTITLE$、神聖ローマ帝国のメンバーの支持者と共に"
  HREREFORM_3:0 "皇帝は改革を遂行することを決定しました："
- HREREFORM_4:0 "$REFORM$。"
- HREREFORM_5:0 "この改革は次のような効果があります："
+ HREREFORM_4:0 "$REFORM$"
+ HREREFORM_5:0 "この改革は以下の効果があります："
  HREREFORM_6:0 "$EFFECT$"
  HREREFORM_LOG:0 "皇帝は$REFORM$を実行しました。"
  HREREFORM_BTN1:0 "OK"
@@ -5673,9 +5673,9 @@
  HREREVOKE_HEADER:0 "$MESSENGER$"
  HREREVOKE_1:0 "改革は中断された"
  HREREVOKE_2:0 "最近の戦争の結果として、皇帝は"
- HREREVOKE_3:0 "改革を中断することを余儀なくされました："
- HREREVOKE_4:0 "$REFORM$。"
- HREREVOKE_5:0 "この改革は次のような効果がありました："
+ HREREVOKE_3:0 "以下の改革を中断することを余儀なくされました："
+ HREREVOKE_4:0 "$REFORM$"
+ HREREVOKE_5:0 "この改革は以下の効果がありました："
  HREREVOKE_6:0 "$EFFECT$"
  HREREVOKE_LOG:0 "皇帝は$REFORM$を中断しました。"
  HREREVOKE_BTN1:0 "OK"
@@ -5723,7 +5723,7 @@
  HREADDPROVINCEEMPEROR_1:1 "神聖ローマ帝国は今やより強固な一つの領域です！"
  HREADDPROVINCEEMPEROR_2:1 "$MONARCHTITLE$、我々は"
  HREADDPROVINCEEMPEROR_3:1 "$PROVINCE$"
- HREADDPROVINCEEMPEROR_4:1 "神聖ローマ帝国に加えました。"
+ HREADDPROVINCEEMPEROR_4:1 "を神聖ローマ帝国に加えました。"
  HREADDPROVINCEEMPEROR_LOG:0 "$PROVINCE$は今や、神聖ローマ帝国の一部です。"
  HREADDPROVINCEEMPEROR_BTN1:0 "OK"
  HREADDPROVINCEEMPEROR_BTN2:0 "OK"
@@ -5992,7 +5992,7 @@
  REFRELIGION_OTHER_SETUP:0 "原住民国家が宗教を改革する時"
  REFRELIGION_OTHER_HEADER:0 "宗教改革！"
  REFRELIGION_OTHER_1:0 "$COUNTRY$"
- REFRELIGION_OTHER_2:0 "改革し、宗教と社会を中央集権化しました。"
+ REFRELIGION_OTHER_2:0 "は改革を行い、宗教と社会を集権化しました。"
  REFRELIGION_OTHER_3:0 "彼らはより発展しました。"
  REFRELIGION_OTHER_LOG:0 "$COUNTRY$は宗教を改革しました。"
  REFRELIGION_OTHER_BTN1:0 "OK"
@@ -6003,7 +6003,7 @@
  REFRELIGION_HEADER:0 "大祭司からの報告"
  REFRELIGION_1:0 "宗教改革！"
  REFRELIGION_2:0 "我々の啓発的な指導の下、"
- REFRELIGION_3:0 "我々は改革を行い、宗教と社会を中央集権化しました。"
+ REFRELIGION_3:0 "我々は改革を行い、宗教と社会を集権化しました。"
  REFRELIGION_4:0 "これは我々を強くするでしょう。"
  REFRELIGION_LOG:0 "我々は宗教改革を行いました。"
  REFRELIGION_BTN1:0 "OK"
@@ -6013,7 +6013,7 @@
  TRADEPORTMOVED_SETUP:0 "我々が交易首都を変更した時"
  TRADEPORTMOVED_HEADER:0 "交易首都を移動しました"
  TRADEPORTMOVED_1:0 "$COUNTRY$"
- TRADEPORTMOVED_2:0 "我々は交易都市を"
+ TRADEPORTMOVED_2:0 "我々は交易首都を以下に変更しました。"
  TRADEPORTMOVED_3:0 "$PROVINCE$"
  TRADEPORTMOVED_4:0 "我々の交易は今からそこで収集されます。"
  TRADEPORTMOVED_LOG:0 "我々は交易首都を$PROVINCE$に変更しました。"
@@ -6024,7 +6024,7 @@
  TRADEPORTMOVEDOTHER_SETUP:0 "国家が交易首都を変更した時"
  TRADEPORTMOVEDOTHER_HEADER:0 "交易首都が移動しました。"
  TRADEPORTMOVEDOTHER_1:0 "$THEM$"
- TRADEPORTMOVEDOTHER_2:0 "交易首都を"
+ TRADEPORTMOVEDOTHER_2:0 "は、交易首都を以下に変更しました。"
  TRADEPORTMOVEDOTHER_3:0 "$PROVINCE$"
  TRADEPORTMOVEDOTHER_LOG:0 "$THEM$は交易首都を$PROVINCE$に変更しました。"
  TRADEPORTMOVEDOTHER_BTN1:0 "素晴らしい！"
