--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -1705,7 +1705,7 @@
  flavor_swi.EVTOPTA8:0 "これは民主主義が死ぬ方法だ…"
  flavor_swi.EVTOPTB8:0 "この狂気は行き過ぎであり、[Root.GetName]に宗教的指導者などいない！"
  flavor_swi.EVTNAME9:0 "百年戦争の闘士たち"
- flavor_swi.EVTDESC9:0 "イングランドとフランスが無意味な戦争で敵対している間、紛争で彼らの奉仕を提供しているスイス傭兵はかなり評判を高め始めている。ほとんどの国にとって、兵士になることは単に一時的な仕事だが、戦争で戦う我々の高度に訓練された傭兵たちは、彼らの巧みな戦術と彼らの契約者に勝利をもたらした残忍な方法でフランスとイングランド双方に衝撃を与えていいる。"
+ flavor_swi.EVTDESC9:0 "イングランドとフランスが無意味な戦争で敵対している間に、紛争において彼らの奉仕を提供しているスイス傭兵の評価はかなり高まりつつある。ほとんどの国にとって、兵士になることは一時的な仕事に過ぎないが、戦争で戦う我々の高度に訓練された傭兵たちは、巧みな戦術と彼らの契約者に勝利をもたらした残忍な方法でフランスとイングランド双方に衝撃を与えている。"
  flavor_swi.EVTOPTA9:0 "すぐにヨーロッパ全体が、スイス傭兵を目にして震え上がるだろう！"
  flavor_swi.EVTNAME10:0 "傭兵の独占"
  flavor_swi.EVTDESC10:0 "ヨーロッパの歴史を通して、最も望ましい傭兵はスイスを故郷と呼ぶ人々とシュヴァーベン出身の人々であった。コンドッティエーリを買い入れるための独立したシュヴァーベン国家がなくなったことで、スイス傭兵の需要が高まっている。我々が傭兵を支配しているこの独占は、我々の軍隊のためにさらに高値をふっかけることを可能にし、我々の支配に挑戦するシュヴァーベン人の不足は、我々の傭兵の恐ろしい評判をさらに促進するだけだ。"
