--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -33,7 +33,7 @@
  JUSTIFY_TRADE_BASE:0 "交易競争の正当化のコストは以下に基づいています\n元のコスト：$VAL|Y0$\n"
  FABRICATE_CLAIM_BASE:1 "§!請求権の捏造のコストは以下に基づいています\n元のコスト：$VAL|Y0$\n"
  FABRICATE_CLAIM_INSIDE_HRE:1 "神聖ローマ帝国内：$VAL|-=1%$\n"
- FABRICATE_ALREADY_CLAIMS:1 "すでに$CLAIM|Y$を主張：$VAL|-=1%$\n"
+ FABRICATE_ALREADY_CLAIMS:1 "すでに$CLAIM|Y$州を主張：$VAL|-=1%$\n"
  FABRICATE_CLAIM_CAPPED:0 "\n上限コストは$VAL|Y$です！"
  SPECIAL_FORCE_LIMIT:0 "$NAME$は以下の要因のため、$VAL|Y$のみ保有できます。\n$WHY$"
  COSSACKS_FORCELIMIT:0 "以下の要因により、$FL$の扶養限界のうち$VAL|%Y$を§Gコサック§!として徴集できます：\n"
