--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -1165,7 +1165,7 @@
  desc_succesful_bid_for_imperial_crown:1 "ついに皇帝の称号を獲得したことで、我々は選帝侯への支配を強化することへと移行した。"
  habsburg_bohemia:0 "ボヘミアの王国"
  desc_habsburg_bohemia:0 "ボヘミアの帝国で最も権威ある称号の一つは、現在、我々の一族の継承された領土の一部である。ボヘミアの荘園は一般的にオーストリアのものほど容易に支配されることはないが、これは帝国政治の主要な資産である。"
- austrian_empire:0 "オーストリア王国"
+ austrian_empire:0 "オーストリア帝国"
  desc_austrian_empire:0 "我々の祖先の土地と神聖ローマ帝国の外での我々の拡大は、世界の目と、我々の正当な帝国において、我々の地位を確立している。"
  royal_hungary:0 "王権ハンガリー"
  desc_royal_hungary:0 "我々はハンガリーの王冠を取得し、トルコの支配への安全な代替手段とした。ハンガリーの人々は、バルカンにおけるオスマン帝国の拡大から逃れたヴラフ人やゲルマン人などの少数派とともに、現在我々の旗の下に集まっている。"
