Save/Update files [ci skip]

--- a/source/localisation/cradle_of_civilization_l_english.yml
+++ b/source/localisation/cradle_of_civilization_l_english.yml
@@ -775,7 +775,7 @@
  mamluk_events.9.d:0 "メッカとメディナの聖地への巡礼を遂行しようとする国民たちを守るための我々の努力は功を奏した。最後の襲撃からは長い時が経っており、今、王国は平和である。"
  mamluk_events.9.a:0 "素晴らしい。"
  mamluk_events.10.t:0 "アウラード・アル＝ナース"
- mamluk_events.10.d:0 "幼い頃から忠実な戦士であることを教育されてきたマムルークの奴隷たちは、多くの場合、所有者や雇用者の信頼を得ている。しかし、彼らの息子である、アウラード・アル＝ナースは、はるかに便利で寛容な状況の下で成長してきたが、一般的に、はるかに能力と忠誠心が低いと考えられている。王室のマムルークとして働くことができないのは、アウラード・アル＝ナースが正規の軍隊内と下位の行政において社会的なエリートを構成するものではないということを示している。\nしかし、これらの高貴な息子たちは、彼らがより大きな責任のために準備ができていることを絶えず証明しようとしている。[defence_province.GetAreaName]国家の防御のための空いた司令官の地位を巡って、彼らの多くは、我々からこの任務を委ねられることを望んでいる。"
+ mamluk_events.10.d:0 "幼い頃から忠実な戦士であることを教育されてきたマムルークの奴隷たちは、所有者や雇用者から全幅の信頼を得ていることが多い。しかし、彼らの息子たちであるアウラード・アル＝ナースは、はるかに過ごしやすく寛容な境遇での下で成長しており、能力も忠誠心もはるかに低いと一般に考えられている。王室のマムルークとして働くことができないアウラード・アル＝ナースは、その代わりに正規軍部隊や下級行政組織で社会的なエリートを構成している。\nしかし、これらの高貴な息子たちは、より大きな職責を担う用意があることを絶えず証明しようとしている。[defence_province.GetAreaName]ステートの防御司令官の地位が空いており、彼らの多くはこの任務を委ねられることを望んでいる。"
  mamluk_events.10.a:0 "息子の一人を任命しよう。"
  mamluk_events.10.b:0 "我々が信じられるのは自分自身だけであり、司令官はマムルークであるべきだ。"
  mamluk_events.11.t:0 "カラーニス"
