Save/Update files [ci skip]

--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -39,9 +39,9 @@
  emp_bav_sway_cologne_effect_tooltip:0 "このミッションを達成すると§Yケルン§!に属国化を強要できます："
  emp_bav_sway_cologne_effect_tooltip2:0 "\n§Yケルン§!が属国にならない場合："
  emp_bav_tame_brandenburg_title:0 "ブランデンブルクの平定"
- emp_bav_tame_brandenburg_desc:0 "ブランデンブルクは、かつてヴィッテルスバッハ家のものであった領土を所有しています。しかし、新進気鋭のホーエンツォレルン家は、北ドイツに独自の強力な国家を樹立する野望を持っています。その野望が夢に過ぎないことを思い知らさなければなりません。"
+ emp_bav_tame_brandenburg_desc:0 "ブランデンブルクは、かつてヴィッテルスバッハ家のものであった領土を所有している。しかし、新進気鋭のホーエンツォレルン家は北ドイツに独自の強力な国家を樹立する野望を持っている。その野望が夢に過ぎないことを思い知らさなければならない。"
  emp_bav_netherlands_title:0 "バイエルン領低地地方"
- emp_bav_netherlands_desc:1 "バイエルンは誰もが認めるように、低地地方の各地域にわずかな請求権を持っている。それはただの権利でしかないように見えるが、今や我々はバイエルンの国力をほぼかつての栄光の時代のものにまで回復させ、その請求権を復活させてこの豊かな地方を再び支配下に置こうとしているのだ。"
+ emp_bav_netherlands_desc:1 "バイエルンは誰もが認めるように、低地地方の各地域にわずかな請求権を持っている。それはただの権利でしかないように見えるが、いまや我々はバイエルンの国力をほぼかつての栄光の時代のものにまで回復させ、その請求権を復活させてこの豊かな地方を再び支配下に置こうとしているのだ。"
  theocracy.1.desc.KOL_secondogeniture_of_BAV:0 "現在後継者が存在しないため、[probably_bavaria.GetUsableName]は[probably_bavaria.Monarch.Dynasty.GetName]家の貴公子を後継者の座に据えるために送ってきました。"
  theocracy.1.i:0 "それならそれでよい。"
  new_flavour_bav.10.t:0 "プファルツ選帝侯のバイエルンへの移管？"
@@ -271,7 +271,7 @@
  emp_sav_integrate_geneva_title:0 "ジュネーヴの統合"
  emp_sav_integrate_geneva_desc:0 "ジュネーヴの街は我が国の支配下で広範な自治を享受してきた。それどころか、この街はスイス連邦と強い繋がりを持っており、連邦に加盟する好機があれば確実にそれに飛びつくことだろう。ジュネーヴが我々の宗主権から逃れようとしないように支配を強化しなければならない。"
  emp_sav_defeat_the_swiss_title:1 "一気によじ登れ"
- emp_sav_defeat_the_swiss_desc:0 "我が国の北側に国境を接するスイス連邦は当然ながら[Root.GetName]の敵である。あの国は独立心が非常に強く、多くの点で我々と世界観を異にしており、たびたび異端信仰の発生源となっている。奴らは滅ぼしておいたほうがいいだろう。"
+ emp_sav_defeat_the_swiss_desc:0 "我が国の北側に国境を接するスイス連邦は[Root.GetName]の天敵である。あの国は独立心が非常に強く、多くの点で我々と世界観を異にしており、たびたび異端信仰の発生源となっている。奴らは滅ぼしておいたほうがいいだろう。"
  emp_sav_conquer_burgundy_title:0 "ブルゴーニュの征服"
  emp_sav_conquer_burgundy_desc:0 "成り上がり者のブルゴーニュ公爵が我が国を北から脅かしている。奴らと国境を接したままフランスが統一されるという恐ろしい予測もありえるが、フランスの中央部からブルゴーニュの領土を奪い取ることができれば、おそらくこの一回だけでフランスを打ち負かすことができるだろう。"
  emp_sav_conquer_provence_title:0 "プロヴァンスの奪取"
