Save/Update files [ci skip]

--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -2,7 +2,7 @@
  bav_reunite_bavaria_title:0 "強大なる統一バイエルン"
  bav_reunite_bavaria_desc:0 "ルードヴィヒ4世の息子たちと、さらにステファン2世の息子たちとが相続した領土の分割を公式に決定した14世紀半ば以降、バイエルン公国は分断されてきた。しかし分断されたバイエルンは弱体で、強大な近隣諸国からの略奪行為に脆弱である。我々が時代の試練に立ち向かおうとするなら、父祖の領土を統一しなければならない！"
  bav_expand_in_bavaria_title:0 "バイエルンの拡張"
- bav_expand_in_bavaria_desc:0 "バイエルンは統一されたとはいえ、オーストリアやボヘミアに単独で立ち向かうことはできない。我々は中核州となる地域を拡張し、我々よりも弱い近隣国を支配の下に置かなくてはならない。"
+ bav_expand_in_bavaria_desc:0 "バイエルンは統一されたとはいえ、オーストリアやボヘミアに単独で立ち向かうことはできない。我々は中核州となる地域を拡張し、我々よりも弱い近隣国を支配のもとに置かなくてはならない。"
  emp_bav_union_with_palatinate_title:0 "ヴィッテルスバッハ家の統一"
  emp_bav_union_with_palatinate_desc:0 "ヴィッテルスバッハ家の分家の数々はバイエルンの国境の向こうにまで及んでいる。その一つはバイエルン・ヴィッテルスバッハ家に疑いなくふさわしい地位である選帝侯位を得ることにより、長きにわたってライン河地方とオーバープファルツに根を張ってきた。この親類一同を再結集し、（皇帝の同意をとりつけると少し説得することで）選帝侯位を我ら自身のものとして要求するのはまったく正当なことだ。"
  emp_bav_union_with_palatinate_effect_tooltip:0 "このミッションを達成すると§Yプファルツ§!に同君連合を強要できます："
@@ -69,7 +69,7 @@
  bav_splendorous_bavaria:0 "華麗なバイエルン"
  desc_bav_splendorous_bavaria:0 "我々の壮麗さが際立つようになったため、ヨーロッパの統治者たちは期待の星として我々に注目している。"
  bav_established_oktoberfest:0 "オクトーバーフェスト"
- desc_bav_established_oktoberfest:0 "我々は国家の栄光のや統治者たちの偉大さや民衆のすばらしさや馬の速さやビールの味を称賛する祝祭を毎年行うことにした。"
+ desc_bav_established_oktoberfest:0 "我々は国家の栄光や統治者たちの偉大さや民衆のすばらしさや馬の速さやビールの味を称賛する祝祭を毎年行うことにした。"
  bav_tamed_brandenburg:0 "ブランデンブルクの平定"
  desc_bav_tamed_brandenburg:0 "ブランデンブルグの脅威に終止符を打ったことで、彼の国の軍の熟練した教官や戦略家を活用し、我が軍の質を高められるようになった。"
  bav_piety_shown:0 "信仰心"
@@ -159,7 +159,7 @@
  emp_mlo_reclaim_ducal_lands_title:0 "公爵領の奪還"
  emp_mlo_reclaim_ducal_lands_desc:0 "ヴェネツィアは本来ならばミラノに帰属するべきブレシアとベルガモの街を占領しつづけてきた。それらは1395年の帝国特許状でミラノ公国の領土と定められていたにも関わらずだ。我々がかつての力を取り戻そうとするのなら、それらの街を奪還せねばならない！"
  emp_mlo_terra_firma_title:0 "大陸領土の奪取"
- emp_mlo_terra_firma_desc:1 "ヴェネツィアは長年にわたって北イタリアの支配をめぐって我々のライバルであった。奴らの大陸領土を征服することで、北イタリアにおけるヴェネツィアの領土を縮小させ、これを最後に我々がこの都市より優位にあることを主張できるのだ！"
+ emp_mlo_terra_firma_desc:1 "ヴェネツィアは長年にわたって北イタリアの支配をめぐって我々のライバルであった。奴らの大陸領土を征服することで、北イタリアにおけるヴェネツィアの領土を縮小させ、ようやく我々がこの都市より優位にあることを主張できるようになるのだ！"
  emp_mlo_terra_firma_trigger_tooltip:0 "§Yヴェネツィア§!が§Y北イタリア§!に§Yヴェネツィア§!州以外の州を持っていない。"
  emp_mlo_kingdom_of_lombardy_title:0 "ロンバルディア王国"
  emp_mlo_kingdom_of_lombardy_desc:0 "12世紀から13世期ごろ、ロンバルディアはロンバルディア同盟として知られる都市同盟により団結した。しかし、そのリーグは消滅し、ミラノやその他有力な都市国家がその穴埋めをした。同盟を復活させるべきなのだが、今回の場合、同盟はミラノによる統治でなければならず、ミラノ[Root.GovernmentName]が恒久的な指導力を提供し、その統一を保証しなければならないーその統一国家こそが真のロンバルディア[Root.GetTier2GovernmentType]だ。"
@@ -196,7 +196,7 @@
  emp_mlo_italian_riches_desc:0 "イタリアの富豪たちのお蔭で、イタリアは勢力を拡大しようとしている国々の垂涎の的となっている。我々の手に入れば、ヨーロッパの超大国の一つに昇り詰めるのは容易なことになるだろう。"
  emp_mlo_italian_riches_effect_tooltip:0 "領有する全ての§Yロンバルド§!文化の州が分離主義を持たない：\n   §Y1§!の開発度を獲得します。"
  emp_mlo_all_roads_lead_to_milan_title:0 "全ての道はミラノに通ず"
- emp_mlo_all_roads_lead_to_milan_desc:0 "ミラノはローマ市と同じくらい古くから存在し、同じくらい際立った歴史を持っている。ローマは長年にわたりイタリアにおいて卓越した地位を享受してきたが、イタリアの文化と国力が再興するであろう現在、我々はその地位を自らのものとして要求する機会を手にしたのだ。"
+ emp_mlo_all_roads_lead_to_milan_desc:0 "ミラノはローマ市と同じくらい古くから存在し、同じくらい際立った歴史を持っている。ローマは長年にわたりイタリアにおいて卓越した地位を享受してきたが、イタリアの文化と国力が再興するであろう現在、我々はその地位を自らのものとして要求する機会を手にしているのだ。"
  emp_mlo_control_the_vatican_title:0 "バチカンの支配"
  emp_mlo_control_the_vatican_desc:0 "教皇はキリスト教における道徳的権威であるだけでなく、イタリアの広大な領域に膨大な直接的権力も持っている。それだけで、教皇が恐るべき敵であることを意味している。なんとかして、教皇がその膨大な力を我々の利益に反する形で絶対に用いないようにするべきだ。"
  emp_mlo_milan_victorious_title:0 "ミラノの勝利"
@@ -334,7 +334,7 @@
  sav_savoyard_diplomacy:0 "巧妙な外交"
  desc_sav_savoyard_diplomacy:0 "我々の巧妙な外交は我々に強力な同盟国をもたらした。今、我々に必要なのはただそれらを確実に維持することだけだ…それと、我々があまり彼らの影響下に陥らないようにする必要がある。"
  sav_savoyard_diplomacy2:0 "サヴォイの外交手腕"
- desc_sav_savoyard_diplomacy2:0 "我が国の外交団の腕前は至るところで知られている。我々は一つの勢力に肩入れすることなく、同盟国の強いネットワークを維持しようとしている。実際、我が国の立場は非常に強いので、第三者のあいだで紛争が生じるときに我が国の目的を達成するために、ある国が別の国と争うように上手く狙って行動することができる。"
+ desc_sav_savoyard_diplomacy2:0 "我が国の外交団の腕前は至るところで知られている。我々は一つの勢力に肩入れすることなく、同盟国の強いネットワークを維持しようとしている。実際、我が国の立場は非常に強いので、第三国のあいだで紛争が生じているときに我が国の目的を達成するために、ある国が別の国と争うように上手く狙って行動することができる。"
  sav_savoyard_army:0 "サヴォイの常備軍"
  desc_sav_savoyard_army:0 "我が国の新たな常備軍は素晴らしいうえによく訓練されており、ヨーロッパでも有数のものだ。この軍隊はきっと我が国に栄光をもたらすことだろう！"
  sav_king_of_cyprus:0 "キプロス王"
@@ -403,7 +403,7 @@
  emp_hab_union_brandenburg_title:0 "ブランデンブルクとの取引"
  emp_hab_union_brandenburg_desc:0 "ブランデンブルクは、自国に挑戦するだけの力を持つドイツ北部国家の権力基盤となる潜在能力を秘めている。もし、自国のドイツ支配を誰も疑問を呈さずに維持したいなら、この挑戦を無力化せねばならない。"
  emp_hab_conquer_switzerland_title:0 "ゲスラーの報復"
- emp_hab_conquer_switzerland_desc:0 "かつて、スイス併合を試みたことがあったが、その都度阻止されたーその中の一つには、弓矢を持った単なる一人の農夫によって阻止された始末だ。何世代にもわたって受けた屈辱を乗り越え、これら反抗的な農民たちを自国の支配下に組み込まねばならない。"
+ emp_hab_conquer_switzerland_desc:0 "かつて、スイス併合を試みたことがあったが、その都度阻止されたーそのうちの一つは、弓矢を持った単なる一人の農夫によって阻止される始末だ。何世代にもわたって受けた屈辱を乗り越え、これら反抗的な農民たちを自国の支配下に組み込まねばならない。"
  emp_hab_conquer_burgundy_title:0 "ブルゴーニュの再征服"
  emp_hab_conquer_burgundy_desc:0 "ブルゴーニュ領は神聖ローマ帝国から消滅した。彼らを確実にもう一度どうにかして自国の支配権の下に置かねばならない。"
  emp_hab_conquer_burgundy_trigger_tooltip:0 "下記の州が存在しない：\n   §Y州§!が§Yフランス§!地方にある。\n   神聖ローマ帝国の一部である。\n   以下の1つを満たす必要があります：\n      神聖ローマ帝国外の国家に領有されている。\n      神聖ローマ帝国外の従属国である国家に領有されている。"
@@ -617,7 +617,7 @@
  emp_gen_dominate_italian_trade_title:0 "イタリア交易の支配"
  emp_gen_dominate_italian_trade_desc:0 "ヴェネツィアが大人しくしていることで、イタリアへ流れ込むあらゆる交易に覇権を行使する我々のやり方に立ち向かう者はいない。"
  gen_ambitions_on_venice:0 "ジェノヴァのヴェネツィア征服"
- gen_dominant_trader:0 "交易の優位"
+ gen_dominant_trader:0 "交易の支配"
  desc_gen_dominant_trader:0 "ジェノヴァはヴェネツィアに勝利し、文句なしのイタリア交易の覇者となった。"
  gen_dominance_of_tyrrhennian:0 "ティレニア海の優越"
  opinion_gen_spanish_alliance:0 "西地中海同盟"
@@ -849,7 +849,7 @@
  emp_ned_colonize_brazil_title:0 "ブラジルの植民地化"
  emp_ned_colonize_brazil_desc:0 "ブラジルは富と不思議の土地だ。これらの土地に植民地化すること、あるいは、誰かが我々が関心を持つ土地を誤って植民地化した場合に、これを奪い取ることは賢明であろう。"
  emp_ned_strengthen_the_vroedschappen_title:0 "市参事会の強化"
- emp_ned_strengthen_the_vroedschappen_desc:0 "控えめな市議会である「vroedschap」は、我々の偉大な政府機構を支えている基盤である。その機嫌を取ることは、国家そのものの機嫌を取ることである。"
+ emp_ned_strengthen_the_vroedschappen_desc:0 "小市議会である「フルートゥクセイプ」は、我々の偉大な政府機構を支えている基盤である。その機嫌を取ることは、国家そのものの機嫌を取ることである。"
  emp_ned_strengthen_the_vroedschappen_tt:1 "の§Y低地諸国§!地方の州が§Y工房§!または§Y会計所§!を持つ。"
  emp_ned_reform_the_generality_lands_title:0 "連邦直轄領"
  emp_ned_reform_the_generality_lands_desc:0 "我が国を公平に運営することは重要であり、決してある州を他の州よりも優先させることはない。そのためには、中央政府が領土を直接管理し、一つの地域の派閥が国政に影響を与えすぎないようにする必要がある場合もある。"
@@ -2389,7 +2389,7 @@
  desc_fra_colonial_enthusiasm_2:0 "南アメリカの広大な陸地は植民地化するための機が熟しており、我々の新しい植民地に入植することを厭わないフランスの国民が不足することはない。"
  gc_mor_wattasid_title:0 "ワッタース家の決意"
  gc_mor_wattasid_desc:0 "ワッタース家はモロッコの強力な王朝であり、しばしばスルタンのワズィールとして奉仕している。彼らは王位への野心をほとんど隠すことなく、公然とした反乱に備え、彼らの力を強化しているようだ。"
- gc_mor_wattasid_tt:0 "ワッタース家の反乱イベントチェーンに決着をつけましょう"
+ gc_mor_wattasid_tt:0 "一連のワッタース家の反乱イベントを完了する"
  DID_NOT_WIN_WAR_AGAINST_IN_YEARS:0 "過去$IN_YEARS|Y$年間に$TAG|Y$に対する戦争に勝利しなかった"
  DID_NOT_WIN_WAR_AGAINST:0 "$TAG|Y$に対する戦争に勝利しなかった"
  WON_WAR_AGAINST_IN_YEARS:0 "過去$IN_YEARS|Y$年間に$TAG|Y$に対する戦争に勝利した"
