--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -1257,7 +1257,7 @@
  desc_por_brazil_tariffs:0 "尊敬されるキャプテンによって設立され世襲されてきた私有地は、経済成長と有意な探索の利益をもたらすことがある。それは、我々が彼らに見返りを求める時だ。"
  por_spice_trade:0 "香辛料貿易"
  desc_por_spice_trade:0 "ヨーロッパ人の香辛料、燻製肉、異国の織物への欲求は、この地域での我々の影響力を非常に強力にしている。"
- por_johor_dominance:0 "交易の優位"
+ por_johor_dominance:0 "交易の支配"
  desc_por_johor_dominance:0 "我々の影響力は、この地域で非常に強く成長しており、下流で事業を行うすべての人に実質的に条件を指示することができる。"
  por_erudite_explorers:0 "未知への優越"
  desc_por_erudite_explorers:0 "我々の人々は、彼らが先駆者であるという理解のもとに安心できるだろう。海洋探検家の遺産は生き続けている。"
@@ -1365,7 +1365,7 @@
  desc_ned_brazil_mod:0 "東と西における交易会社の設立は、オランダの影響圏を再び活性化させた。植民地への支援がこれほど強まったことはない。"
  ned_ceylon_mod:0 "オランダ海洋諸島"
  desc_ned_ceylon_mod:0 "我々が香辛料の交易路で持っている港は多いほど良い。"
- malacca_conquest:0 "交易優勢"
+ malacca_conquest:0 "交易の支配"
  desc_malacca_conquest:0 "我々はマラッカの重要な交易都市と周辺地域を支配している。"
  ned_zeelandia_mod:0 "安平古堡"
  desc_ned_zeelandia_mod:0 "切り石とオランダ建築の要塞から来る予兆は、台湾の島々を誇りあるものとしている。"
@@ -1515,11 +1515,11 @@
  desc_increased_african_indian_trade:0 "ヨーロッパ商人のインド市場への参入がより容易になる。"
  vij_maratha_modifier:0 "マラーティ騎兵隊"
  desc_vij_maratha_modifier:0 "マハーラーシュトラの征服によって我々はマラーティの熟達した乗馬技術を獲得した。"
- east_africa_conquest:0 "東アフリカ交易における優勢"
+ east_africa_conquest:0 "東アフリカ交易の支配"
  vij_lanka_modifier:0 "ランカ島の征服"
  desc_vij_lanka_modifier:0 "ランカ島を征服した後には、島の仏教徒たちをヒンドゥー教に改宗させるべきだろう。"
- vij_oman_modifier:0 "オマーン交易における優勢"
- vij_hormuz_modifier:0 "アデン交易における優勢"
+ vij_oman_modifier:0 "オマーン交易の支配"
+ vij_hormuz_modifier:0 "アデン交易の支配"
  desc_vij_hormuz_modifier:0 "アデン湾における交易の優勢を確保することによって、我が帝国中のありとあらゆる商人たちは活気づいている。"
  vij_malabar_modifier:0 "マラバールの香辛料貿易"
  desc_vij_malabar_modifier:0 "我々は全力を尽くしてマラバール海岸沿いの香辛料貿易を開拓している。"
