--- a/source/localisation/achievement_tooltips_l_english.yml
+++ b/source/localisation/achievement_tooltips_l_english.yml
@@ -52,6 +52,6 @@
  captured_a_flagship:0 "敵国の旗艦を拿捕した。"
  expelled_5_different_minorities_tooltip:0 "異なる5つのマイノリティを追放した。"
  spanish_fly_tooltip:0 "イベリア地方に首都のある国家のいずれかが[Root.GetName]の同君下位国となる。"
- spread_revolution_ten_times_tt:0 "革命を10回拡大する"
+ spread_revolution_ten_times_tt:0 "革命を10倍に拡大する"
  kingdom_of_god_achievement_tt:0 "神の王国である"
  completed_austrian_missions:0 "オーストリアのミッションを完了する。"
