--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -50,7 +50,7 @@
  new_flavour_bav.10.a:0 "[From.GetUsableName]選帝侯万歳！"
  new_flavour_bav.10.a2:0 "そのままにする。"
  new_flavour_bav.10.b:0 "選帝侯位はプファルツに留まるものとする。"
- new_flavour_bav.10.b2:0 "選帝侯は必要ない。"
+ new_flavour_bav.10.b2:0 "選帝侯位など必要ない。"
  new_flavour_bav.11.t:0 "ケルンの次子相続制"
  new_flavour_bav.11.d:0 "ケルン選帝侯国は我々の支配下となった。神聖ローマ帝国における我々の野望を最高のものにするために、[Root.Monarch.Dynasty.GetName]の[Root.GovernmentName]の継承権に列していない[Root.GetUsableName]の者を[KOL.GetAdjective]の[KOL.Monarch.GetTitle]の地位に派遣し、[KOL.GovernmentName]で我々の利益が代表されるようにするという仕組みが考案された。"
  new_flavour_bav.11.a:0 "実現させる。"
@@ -155,7 +155,7 @@
  emp_mlo_emilia_romagna_title:0 "南方への拡張"
  emp_mlo_emilia_romagna_desc:0 "ヴィスコンティ家の歴代のミラノ公はエミリア＝ロマーニャの係争地を支配下に置くために幾度も戦争を重ねてきた。しかしながら、そうした戦争は結局のところ無駄に終わり、フェラーラとボローニャはいまだに我々に挑戦を続けている。我々は彼らの抵抗を叩き潰さねばならない。"
  emp_mlo_tuscany_title:0 "トスカーナ征服"
- emp_mlo_tuscany_desc:0 "トスカーナの諸都市は長年にわたってミラノ公をその富で誘惑してきた。それらの都市を我が国に併合できるのなら、北イタリアに強国を作り上げるという我々の目標の実現に大きく近づくことだろう。"
+ emp_mlo_tuscany_desc:0 "トスカーナの諸都市は長年にわたってミラノ公をその富で誘惑してきた。それらの都市を我が国に併合できれば、北イタリアに強国を作り上げるという我々の目標の実現に大きく近づくことだろう。"
  emp_mlo_reclaim_ducal_lands_title:0 "公爵領の奪還"
  emp_mlo_reclaim_ducal_lands_desc:0 "ヴェネツィアは本来ならばミラノに帰属するべきブレシアとベルガモの街を占領しつづけてきた。それらは1395年の帝国特許状でミラノ公国の領土と定められていたにも関わらずだ。我々がかつての力を取り戻そうとするのなら、それらの街を奪還せねばならない！"
  emp_mlo_terra_firma_title:0 "大陸領土の奪取"
@@ -330,7 +330,7 @@
  sav_holy_order_of_maurice_and_lazarus_fallback:0 "聖マウリツィオ・ラザロ騎士団"
  desc_sav_holy_order_of_maurice_and_lazarus_fallback:0 "聖マウリツィオ騎士団と聖ラザロ騎士団（後者は十字軍騎士団である）という二つの騎士修道会の合併により、サヴォイア家は両者の指導者の地位にある。我々はその職務によって強大な道徳的権威と宗教的権威を持つことができるのだ。"
  sav_alpine_powerhouse:0 "アルプスの大国"
- desc_sav_alpine_powerhouse:0 "我々は祖国の繁栄にその強さの基盤を置いている。政治上の指導力は経済での優越のあとで確実にすぐ獲得できるだろう。"
+ desc_sav_alpine_powerhouse:0 "我々は祖国の繁栄にその強さの基盤を置いている。政治上の指導力は経済上の優越のあとで確実にすぐ獲得できるだろう。"
  sav_savoyard_diplomacy:0 "巧妙な外交"
  desc_sav_savoyard_diplomacy:0 "我々の巧妙な外交は我々に強力な同盟国をもたらした。今、我々に必要なのはただそれらを確実に維持することだけだ…それと、我々があまり彼らの影響下に陥らないようにする必要がある。"
  sav_savoyard_diplomacy2:0 "サヴォイの外交手腕"
@@ -2125,7 +2125,7 @@
  fkn_patronage_of_the_arts_title:0 "学芸の奨励"
  fkn_patronage_of_the_arts_desc:0 "我が国の民は芸術の才能と発明の精神に恵まれている。その才能を宮廷の繁栄と国家の栄光に向けるよう奨励することによって、我々は啓蒙主義的な[Root.Monarch.GetTitle]という名声を高めるのが望ましいだろう。"
  fkn_industrial_revolution_title:0 "工場設備の普及"
- fkn_industrial_revolution_desc:0 "生産拠点は国家の強さそのものだ。ドイツを支配しうる経済的原動力を持つ存在へと成長しようとするのなら、我々はそれを増大させなければならない。"
+ fkn_industrial_revolution_desc:0 "生産拠点は国家の強さそのものだ。ドイツを支配しうる経済大国へと成長しようとするのなら、我々はそれを増大させなければならない。"
  fkn_sanspareil_title:0 "無窮の栄華"
  fkn_sanspareil_desc:0 "我々は並ぶもののない壮麗な宮殿を建設しなければならない。嫉み深い近隣諸国はそれと競おうとするだろうが、全く勝負にならないだろう。"
  fkn_union_with_brandenburg_title:0 "ブランデンブルクの請求"
@@ -2133,7 +2133,7 @@
  fkn_we_prosper:0 "繁栄する地域"
  desc_fkn_we_prosper:0 "近年我が国に起っている発展は空前の繁栄の時代をもたらしている。"
  fkn_we_produce_stuff:0 "生産量の増大"
- desc_fkn_we_produce_stuff:0 "フランケンの工場設備は次々にから次へと製品を生産し続けており、その製品は我々の民を豊かにし国庫を満たすだろう。"
+ desc_fkn_we_produce_stuff:0 "フランケンの工場設備は次から次へと製品を生産し続けており、その製品は我々の民を豊かにし国庫を満たすだろう。"
  fkn_arts_patronised:0 "学芸の奨励"
  desc_fkn_arts_patronised:0 "学芸を奨励するという我々の意向が実を結んでいる。今や芸術家たちがはるか遠くから我々の宮廷の栄華に貢献するために集まってきている。"
  fkn_franconia_ascendant:0 "フランケンの優位"
