--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -536,7 +536,7 @@
  naval_supplies:0 "海軍用品"
  naval_suppliesDESC:0 "海軍用品は、タールのための基本的な木材、ロープ、リネン、帆、その他の様々な材料といった、船の建造に必要なすべての物を表します。18世紀初頭に北米が供給の代替地となるまでの間、バルト人たちが最初の主要な供給者であった。アメリカへの植民地拡大はこうした重要な物資の供給を確保するという目的も持っていた。"
  salt:0 "塩"
- saltDESC:0 "塩は、人間の生活に不可欠である。それに加え、長い冬には食糧を保存するための一般的な手段でもあった。それは中央ヨーロッパの鉱山から鉱物としてもたらされ、あるいは自然に、晴れた海岸線に沿った塩湿地で蒸発によって作られるかのいずれかであった。"
+ saltDESC:0 "塩は、人間の生活に不可欠である。加えて、長い冬には食糧を保存するための一般的な手段でもあった。それは中央ヨーロッパの鉱山から鉱物としてもたらされるか、あるいは自然に、晴れた海岸線に沿った塩湿地で蒸発によって作られるかのいずれかであった。"
  slaves:0 "奴隷"
  slavesDESC:0 "奴隷は古代から取引が行われていたが、奴隷がアメリカ大陸においてヨーロッパ人が経営する大規模農園のために安価な労働力を提供したことで、16世紀後半、大幅に需要が高まった。"
  spices:0 "香辛料"
