--- a/source/localisation/womeninhistory_l_english.yml
+++ b/source/localisation/womeninhistory_l_english.yml
@@ -85,7 +85,7 @@
  women_history_events.21.a:0 "我が国の利益はそのような有名作家から生じている。"
  women_history_events.21.b:0 "彼女のような女性が宮廷に欲しい！"
  women_history_events.22.t:0 "グレース・オマリー"
- women_history_events.22.d:0 "グレース・オマリーとして知られている女性は、彼女の息子のティボット・バークとムロウ・オフラティ、そして彼女の兄弟である、ドナル・ナ・ピオパの釈放を求めるため、我々の宮廷に到着した。彼女はオマーリー家の族長であり、ウマイルの女王であり、マヤの一族であり、交易商と海賊として知られていた。「コノートの海の女王」と呼ばれる彼女は雌鶏の城の所有者であった。これは最初にそれを 「雄鶏の城」と名づけたジョイス一族からコリブ湖の砦を奪った後、彼女の最初の夫の態度のためにそう呼ばれた。彼が死んだとき、ジョイスはそれを取り戻そうとしたが、グレース・オマリーはそれを激しく守り、とても感銘を受けた彼らは、それを「雌鶏の城」を意味する"Caisleán na Circe"へと改名した。伝説は、彼女が砦の屋根から鉛を取り、それを溶かして攻撃側の兵士の頭上に注ぐことでイングランドから城を守ったと言う話である。助けが到着するまで彼女は包囲攻撃に耐え、イングランドは撃退された。彼女を顧問や提督として迎えることは価値があるものかもしれない。"
+ women_history_events.22.d:0 "グレース・オマリーとして知られている女性は、彼女の息子のティボット・バークとムロウ・オフラティ、そして彼女の兄弟である、ドナル・ナ・ピオパの釈放を求めるため、我々の宮廷に到着した。彼女はオマーリー家の族長であり、ウマイルの女王であり、マヤの一族であり、交易商と海賊として知られていた。「コノートの海の女王」と呼ばれる彼女は雌鶏の城の所有者であった。これは最初にそれを 「雄鶏の城」と名づけたジョイス一族からコリブ湖の砦を奪った後、彼女の最初の夫の態度のためにそう呼ばれた。彼が死んだとき、ジョイスはそれを取り戻そうとしたが、グレース・オマリーはそれを激しく守り、とても感銘を受けた彼らは、それを「雌鶏の城」を意味する\"Caisleán na Circe\"へと改名した。伝説は、彼女が砦の屋根から鉛を取り、それを溶かして攻撃側の兵士の頭上に注ぐことでイングランドから城を守ったと言う話である。助けが到着するまで彼女は包囲攻撃に耐え、イングランドは撃退された。彼女を顧問や提督として迎えることは価値があるものかもしれない。"
  women_history_events.22.a:0 "息子と異母兄を釈放して、彼女を顧問にしよう。"
  women_history_events.22.b:0 "彼女を提督として、好きなようにやらせよう。"
  women_history_events.22.c:0 "囚人の解放だけはしよう。"
@@ -167,7 +167,7 @@
  women_history_events.40.a:0 "彼女の息子が成人するまでは、彼女を支配者としよう。"
  women_history_events.40.b:0 "彼女に支配させよう－顧問としての知恵と指導で。"
  women_history_events.41.t:0 "カテリ・テカクウィサ"
- women_history_events.41.d:0 "若い女性の顔は天然痘で傷つき、病気のために眼は弱かった。テカクウィサまたは"問題にぶつかる彼女"はオーリーズビルで生まれ、彼女の両親と兄弟が彼女もかかった天然痘で死亡した後、叔父と叔母に引き取られた。彼女は19歳でローマカトリックに改宗した時にキャサリンを意味するカテリの名を取り、彼女の改宗による虐待と死の脅威に直面すると、キリスト教社会で暮らすために去った。改宗から5年後、彼女は最後の言葉「イエス、マリア、私はあなたがたを愛しています」を残し彼女の友人であるマリー・テレーズの腕の中で息を引き取った。証人たちは、彼女の死後わずか数分で彼女の傷跡は消え、彼女の肉体は最終的に輝きと恵みで美しく輝いていたと言う。彼女は慈善、勤勉、純潔、貞操の美徳、苦行によって知られるだろう。彼女の墓地の近くに礼拝堂が建てられ、巡礼者が彼女を称えるようになった。"
+ women_history_events.41.d:0 "若い女性の顔は天然痘で傷つき、病気のために眼は弱かった。テカクウィサまたは\"問題にぶつかる彼女\"はオーリーズビルで生まれ、彼女の両親と兄弟が彼女もかかった天然痘で死亡した後、叔父と叔母に引き取られた。彼女は19歳でローマカトリックに改宗した時にキャサリンを意味するカテリの名を取り、彼女の改宗による虐待と死の脅威に直面すると、キリスト教社会で暮らすために去った。改宗から5年後、彼女は最後の言葉「イエス、マリア、私はあなたがたを愛しています」を残し彼女の友人であるマリー・テレーズの腕の中で息を引き取った。証人たちは、彼女の死後わずか数分で彼女の傷跡は消え、彼女の肉体は最終的に輝きと恵みで美しく輝いていたと言う。彼女は慈善、勤勉、純潔、貞操の美徳、苦行によって知られるだろう。彼女の墓地の近くに礼拝堂が建てられ、巡礼者が彼女を称えるようになった。"
  women_history_events.41.a:0 "このような聖人を収容できるのは身に余る光栄だ。"
  women_history_events.42.t:0 "マリア・ジビーラ・メーリアン"
  women_history_events.42.d:0 "自然科学者で画家である、マリア・ジビーラ・メーリアンは、2年間で南アメリカから戻ってきた。マラリアにより彼女は故郷に帰ることを余儀なくされたが、彼女の旅は、蝶の変態の慎重な観察と文書化について、彼女の主要な著作であるスリナム産昆虫変態図譜の研究を促した。ゲオルク・フレーゲルの生徒であり静物画家のヤーコプ・マーレルは、マリアの義父であり、彼女に絵を描くことを奨励し教えてくれた。マリアは彼女が28歳のときに、自然イラストの最初の本を出版し『新しい花々』と題した。"
@@ -179,7 +179,7 @@
  women_history_events.43.b:0 "何らかの手段で称えよう。"
  women_history_events.43.c:0 "彼女のような指揮官をもっと利用することができる！"
  women_history_events.44.t:0 "エレナ・コルナーロ・ピスコピア"
- women_history_events.44.d:0 "パドヴァ大聖堂は、ボローニャ、ペルージャ、ローマ、ナポリの大学から招待された多くの来賓と共に、大学の権威、全学部の教授、学生、ヴェネツィアの評議員の多くで満ちていた。 エレナ・コルナーロ・ピスコピアは、アリストテレスの作品から任意の一節を説明することで哲学の博士号を取得するため、古典的なラテン語で話していた間、何の緊張も示していなかった。聴衆は彼女の話に大きく注意を払って耳を傾け、博士号、哲学書、頭の月桂樹の花輪、指輪、そして彼女の肩の上にリナルディーニ教授が置いたモゼタの毛皮を授与されると、熱烈に喝采を浴びせた。彼女は大学で博士号を取得した最初の女性であり、彼女の家族が、優秀な教師の下で勉強させるようにとのジョヴァンニ・ファブリスの助言に従っていなければ、不可能だったであろう。彼女は母国語のほかに、ヘブライ語、スペイン語、フランス語、ラテン語、ギリシャ語、アラビア語、カルデア語に堪能であるため、七カ国語の習得者である"Oraculum Septilingue"（七つの言語の神託）というタイトルは受けるに値するものだ。言語以外にも、彼女は数学、哲学、神学を学んでいる。彼女は、ハープシコード、クラビコード、ハープ、バイオリンを習得している熟練した音楽家である。"
+ women_history_events.44.d:0 "パドヴァ大聖堂は、ボローニャ、ペルージャ、ローマ、ナポリの大学から招待された多くの来賓と共に、大学の権威、全学部の教授、学生、ヴェネツィアの評議員の多くで満ちていた。 エレナ・コルナーロ・ピスコピアは、アリストテレスの作品から任意の一節を説明することで哲学の博士号を取得するため、古典的なラテン語で話していた間、何の緊張も示していなかった。聴衆は彼女の話に大きく注意を払って耳を傾け、博士号、哲学書、頭の月桂樹の花輪、指輪、そして彼女の肩の上にリナルディーニ教授が置いたモゼタの毛皮を授与されると、熱烈に喝采を浴びせた。彼女は大学で博士号を取得した最初の女性であり、彼女の家族が、優秀な教師の下で勉強させるようにとのジョヴァンニ・ファブリスの助言に従っていなければ、不可能だったであろう。彼女は母国語のほかに、ヘブライ語、スペイン語、フランス語、ラテン語、ギリシャ語、アラビア語、カルデア語に堪能であるため、七カ国語の習得者である\"Oraculum Septilingue\"（七つの言語の神託）というタイトルは受けるに値するものだ。言語以外にも、彼女は数学、哲学、神学を学んでいる。彼女は、ハープシコード、クラビコード、ハープ、バイオリンを習得している熟練した音楽家である。"
  women_history_events.44.a:0 "このような博学な女性は、宮廷において必要だ！"
  women_history_events.44.b:0 "彼女の名声と成果は、世界と共有されるだろう！"
  women_history_events.45.t:0 "エカテリーナ・ロマノヴナ・ヴォロンツォーワ・ダーシュコワ"
@@ -264,7 +264,7 @@
  women_history_events.64.a:0 "彼女は王位への顧問としてより満足するだろう。そうしよう。"
  women_history_events.64.b:0 "マリアは我が国を支配するだろう。"
  women_history_events.65.t:0 "サヴォイア公妃マルグリット・ドートリッシュ"
- women_history_events.65.d:0 ""Dame de deuil"－喪服の貴婦人という称号は、宮廷歴史家で詩人のジャン・ルメール・ド・ベルジュによって与えられた－サヴォイア公妃マルグリット・ドートリッシュは、二番目の夫であるサヴォイア公フィリベルト2世が結婚して3年後に死去すると、再婚しないことを誓った。彼女はフランシュ＝コンテ地域の代表会議により、統治者として選出された唯一の女性となったことで、女性の統治者のための新たな地位を築いた。父である神聖ローマ帝国皇帝マクシミリアンは、彼女を低地諸国の総督と、後に神聖ローマ皇帝となる、彼女の甥カールが成人するまでの後見人に任命した。彼女の統治は相対的に平和と繁栄をもたらし、彼女はフランドルの布の利益に有利なイングランドとの商業条約を交渉し、カンブレーの和約、いわゆる貴婦人の和約をルイーズ・ド・サヴォワと共に交渉し、ネーデルラントにおける父や甥と臣民との間の仲介役を果たしている。カールはマルグリットの影響力に短期間反抗した後、彼女を賢明な顧問の一人であると認識している。"
+ women_history_events.65.d:0 "\"Dame de deuil\"－喪服の貴婦人という称号は、宮廷歴史家で詩人のジャン・ルメール・ド・ベルジュによって与えられた－サヴォイア公妃マルグリット・ドートリッシュは、二番目の夫であるサヴォイア公フィリベルト2世が結婚して3年後に死去すると、再婚しないことを誓った。彼女はフランシュ＝コンテ地域の代表会議により、統治者として選出された唯一の女性となったことで、女性の統治者のための新たな地位を築いた。父である神聖ローマ帝国皇帝マクシミリアンは、彼女を低地諸国の総督と、後に神聖ローマ皇帝となる、彼女の甥カールが成人するまでの後見人に任命した。彼女の統治は相対的に平和と繁栄をもたらし、彼女はフランドルの布の利益に有利なイングランドとの商業条約を交渉し、カンブレーの和約、いわゆる貴婦人の和約をルイーズ・ド・サヴォワと共に交渉し、ネーデルラントにおける父や甥と臣民との間の仲介役を果たしている。カールはマルグリットの影響力に短期間反抗した後、彼女を賢明な顧問の一人であると認識している。"
  women_history_events.65.a:0 "彼女が神聖ローマ帝国皇帝の耳であるなら、彼女は我々の耳でもある。"
  women_history_events.65.b:0 "この国家には支配者として彼女が必要だ。"
  women_history_events.66.t:0 "イサベル・クララ・エウヘニア"
