--- a/source/localisation/red_queen_text_l_english.yml
+++ b/source/localisation/red_queen_text_l_english.yml
@@ -539,97 +539,97 @@
  dlc060_reason_generic:0 "「§YRights of Man Expansion§!」は多くの付随するフレーバーイベントに加え、列強や退位、君主の個性や配偶者といった新しいゲームシステムを追加します。"
  dlc060_reason_ottomans:0 "「§YRights of Man Expansion§!」は列強や退位、君主の個性といった機能に加え、§Yオスマン§!政体に特別なシステムを追加します。"
  dlc060_reason_ottomans_reason:1 "\n§Yオスマン§!を選択しているため、このDLCを推奨します。"
- dlc060_reason_fetishism:0 "「§YRights of Man Expansion§!」は列強や退位、君主の個性といった機能に加え、§Y呪物崇拝§!国家にカルトのシステムを追加します。"
+ dlc060_reason_fetishism:0 "「§YRights of Man Expansion§!」は列強や退位、君主の個性といった機能に加え、§Y呪物崇拝§!国家にカルトのシステムを追加します。"
  dlc060_reason_fetishism_reason:1 "\n§Y呪物崇拝§!の国家を選択しているため、このDLCを推奨します。"
- dlc060_reason_coptic:0 "「§YRights of Man Expansion§!」は列強や退位、君主の個性といった機能に加え、§Yコプト正教会§!国家に祝福と聖地のシステムを追加します。"
+ dlc060_reason_coptic:0 "「§YRights of Man Expansion§!」は列強や退位、君主の個性といった機能に加え、§Yコプト正教会§!国家に祝福と聖地のシステムを追加します。"
  dlc060_reason_coptic_reason:1 "\n§Yコプト正教会§!の国家を選択しているため、このDLCを推奨します。"
- dlc061_reason_hre:0 "「§YGerman Princes Unit Pack§!」は§Y神聖ローマ帝国§!内の主要な国家向けに新しい軍隊モデルとテクスチャを追加します。"
+ dlc061_reason_hre:0 "「§YGerman Princes Unit Pack§!」は§Y神聖ローマ帝国§!内の主要な国家向けに新しい軍隊モデルとテクスチャを追加します。"
  dlc061_reason_in_hre_reason:1 "\n§Y神聖ローマ帝国§!内の国家を選択しているため、このユニットパックを推奨します。"
- dlc062_reason_west_africa:0 "「§YWest African Unit Pack§!」は§Y西アフリカ§!の国家向けに新しい軍隊モデルとテクスチャを追加します。"
+ dlc062_reason_west_africa:0 "「§YWest African Unit Pack§!」は§Y西アフリカ§!の国家向けに新しい軍隊モデルとテクスチャを追加します。"
  dlc062_reason_west_africa_reason:1 "\n§Y西アフリカ§!の国家を選択しているため、このユニットパックを推奨します。"
- dlc063_reason_europe:0 "「§YSongs of Regency Music Pack§!」 はRights of Manでの追加コンテンツの補完のため作曲された4種類の楽曲を追加します。"
+ dlc063_reason_europe:0 "「§YSongs of Regency Music Pack§!」 は§YRights of Man§!での追加コンテンツの補完のため作曲された4種類の楽曲を追加します。"
  dlc063_reason_europe_reason:1 "\n§Yヨーロッパ§!の国家を選択しているため、この音楽パックを推奨します。"
- dlc065_reason_sweden:0 "「§YFredman's Epistles Music Pack§!」は18世紀スウェーデンの伝統的な15曲のコレクションを追加します。"
+ dlc065_reason_sweden:0 "「§YFredman's Epistles Music Pack§!」は18世紀スウェーデンの伝統的な15曲のコレクションを追加します。"
  dlc065_reason_sweden_reason:1 "\n§Yスウェーデン§!を選択しているため、この音楽パックを推奨します。"
- dlc066_reason_generic:0 "「§YMandate of Heaven Expansion§!」は§Y東アジア§!の国家向けに特化したシステムに加え、歴史区分と黄金時代等の新しいゲームシステムを追加します。"
- dlc066_reason_china:0 "「§YMandate of Heaven Expansion§!」は§Y中華皇帝§!向けに多くの新しいゲームシステムを追加し、内外に向けての政策にさらなる手段とやりがいを与えます。"
+ dlc066_reason_generic:0 "「§YMandate of Heaven Expansion§!」は§Y東アジア§!の国家向けに特化したシステムに加え、歴史区分と黄金時代等の新しいゲームシステムを追加します。"
+ dlc066_reason_china:0 "「§YMandate of Heaven Expansion§!」は§Y中華皇帝§!向けに多くの新しいゲームシステムを追加し、内外に向けての政策にさらなる手段とやりがいを与えます。"
  dlc066_reason_china_reason:1 "\n§Y中国§!にある国家を選択しているため、このDLCを推奨します。"
- dlc066_reason_japan:0 "「§YMandate of Heaven Expansion§!」は§Y日本の幕府§!と彼らに忠誠を誓う大名たちに新しいゲームシステムを追加します。"
+ dlc066_reason_japan:0 "「§YMandate of Heaven Expansion§!」は§Y日本の幕府§!と彼らに忠誠を誓う大名たちに新しいゲームシステムを追加します。"
  dlc066_reason_japan_reason:1 "\n§Y日本§!の国家を選択しているため、このDLCを推奨します。"
- dlc066_reason_manchu:0 "「§YMandate of Heaven Expansion§!」は§Y満州§!に新しい八旗のシステムを追加し、彼らは軍隊を強化するため将軍たちを結集させることができます。"
+ dlc066_reason_manchu:0 "「§YMandate of Heaven Expansion§!」は§Y満州§!に新しい八旗のシステムを追加し、彼らは軍隊を強化するため将軍たちを結集させることができます。"
  dlc066_reason_manchu_reason:1 "\n§Y満州§!にある国家を選択しているため、このDLCを推奨します。"
- dlc066_reason_east_asia_generic:0 "「§YMandate of Heaven Expansion§!」は§Y中華帝国§!等の§Y東アジア§!に新しいシステムを追加し、これによってその地域の他の国々は天の玉座を請求することができます。"
+ dlc066_reason_east_asia_generic:0 "「§YMandate of Heaven Expansion§!」は§Y中華帝国§!等の§Y東アジア§!に新しいシステムを追加し、これによってその地域の他の国々は天の玉座を請求することができます。"
  dlc066_reason_east_asia_generic_reason:1 "\n§Y東アジア§!の国家を選択しているため、このDLCを推奨します。"
- dlc067_reason_japan:0 "「§YDaimyo Unit Pack§!」は12の§Y日本の大名§!向けに新しい軍勢モデルとテクスチャを追加します。"
+ dlc067_reason_japan:0 "「§YDaimyo Unit Pack§!」は12の§Y日本の大名§!向けに新しい軍勢モデルとテクスチャを追加します。"
  dlc067_reason_japan_reason:1 "\n§Y日本§!の国家を選択しているため、このユニットパックを推奨します。"
- dlc068_reason_has_stuff:0 "「§YAsian Majors Unit Pack§!」は§Y明§!、§Y清§!、§Y日本§!と§Y朝鮮§!向けに新しい軍隊モデルとテクスチャを追加します。"
- dlc069_reason_has_stuff:1 "「§YNorthern Unit Pack§!」は§Yオイラト§!、§Yチャガタイ§!、§Yモンゴル§!と§Y満州§!の軍隊向けに、新しい部族軍モデルとテクスチャを追加します。"
- dlc070_reason_generic:1 "「§YArtillery Pack§!」は、すべての文化グループ向けに新しい砲兵のスプライトを追加します。"
+ dlc068_reason_has_stuff:0 "「§YAsian Majors Unit Pack§!」は§Y明§!、§Y清§!、§Y日本§!と§Y朝鮮§!向けに新しい軍隊モデルとテクスチャを追加します。"
+ dlc069_reason_has_stuff:1 "「§YNorthern Unit Pack§!」は§Yオイラト§!、§Yチャガタイ§!、§Yモンゴル§!と§Y満州§!の軍隊向けに、新しい部族軍モデルとテクスチャを追加します。"
+ dlc070_reason_generic:1 "「§YArtillery Pack§!」は、すべての文化グループ向けに新しい砲兵のスプライトを追加します。"
  dlc070_reason_generic_reason:1 "\n砲兵を使用する国家を選択しているため、このユニットパックを推奨します。"
- dlc071_reason_east_asia:1 "「§YAsian Ships Pack§!」は他国から恐れられた朝鮮の亀甲船や日本の固有デザインの船舶等の§Y東アジア§!向けの新しい戦闘艦モデルを追加します。"
+ dlc071_reason_east_asia:1 "「§YAsian Ships Pack§!」は他国から恐れられた朝鮮の亀甲船や日本の固有デザインの船舶等の§Y東アジア§!向けの新しい戦闘艦モデルを追加します。"
  dlc071_reason_east_asia_reason:1 "\n§Y東アジア§!の国家を選択しているため、このユニットパックを推奨します。"
- dlc072_reason_russia:0 "「§YThird Rome Immersion Pack§!」はロシア国境内外の国家向け48種類の新しいユニットモデルに加え、ツァーリ国と公国、ストレリツィユニットやシベリア開拓といった§Yロシア§!向けの新しいシステムを追加します。"
+ dlc072_reason_russia:0 "「§YThird Rome Immersion Pack§!」はロシア国境内外の国家向け48種類の新しいユニットモデルに加え、ツァーリ国と公国、ストレリツィユニットやシベリア開拓といった§Yロシア§!向けの新しいシステムを追加します。"
  dlc072_reason_russia_reason:1 "\n§Yロシア§!の中心部にある国家を選択しているため、このDLCを推奨します。"
- dlc076_reason_russia:0 "「§YRus Awaken Music Pack§!」は§Yロシア国家§!の台頭からインスピレーションを得た楽曲を追加します。"
+ dlc076_reason_russia:0 "「§YRus Awaken Music Pack§!」は§Yロシア国家§!の台頭からインスピレーションを得た楽曲を追加します。"
  dlc076_reason_russia_reason:1 "\n§Yロシア§!の中心部にある国家を選択しているため、この音楽パックを推奨します。"
- dlc077_reason_muslim:0 "「§YCradle of Civilization Expansion§!」はイスラム学派や交易政策を通じて宗教を広める機能等、§Yイスラム教§!国家向けの新しいシステムを追加します。"
+ dlc077_reason_muslim:0 "「§YCradle of Civilization Expansion§!」はイスラム学派や交易政策を通じて宗教を広める機能等、§Yイスラム教§!国家向けの新しいシステムを追加します。"
  dlc077_reason_muslim_reason:1 "\n§Yイスラム教§!の国家を選択しているため、このDLCを推奨します。"
- dlc077_reason_middle_east:0 "「§YCradle of Civilization Expansion§!」はイスラム学派、新しい政体や交易政策を通じて宗教を広める機能等、§Y中東§!と§Yイスラム教§!国家向けの新しいシステムを追加します。"
+ dlc077_reason_middle_east:0 "「§YCradle of Civilization Expansion§!」はイスラム学派、新しい政体や交易政策を通じて宗教を広める機能等、§Y中東§!と§Yイスラム教§!国家向けの新しいシステムを追加します。"
  dlc077_reason_middle_east_reason:1 "\n§Y中東§!の国家を選択しているため、このDLCを推奨します。"
- dlc077_reason_ottoman:0 "「§YCradle of Civilization Expansion§!」はイスラム学派のような§Y中東§!や§Yイスラム教§!国家向けの機能に加え、§Yオスマン§!政体とイェニチェリの改善のための特別なシステムを追加します。"
+ dlc077_reason_ottoman:0 "「§YCradle of Civilization Expansion§!」はイスラム学派のような§Y中東§!や§Yイスラム教§!国家向けの機能に加え、§Yオスマン§!政体とイェニチェリの改善のための特別なシステムを追加します。"
  dlc077_reason_ottoman_reason:2 "\n§Yオスマン§!を選択しているため、このDLCを推奨します。"
- dlc077_reason_tims:0 "「§YCradle of Civilization Expansion§!」は§Yティムール§!に特別なシステムを追加し、地域の強力な国家にティムールの王子を王位につけたり、ティムールの遺産を請求することを可能にします。"
+ dlc077_reason_tims:0 "「§YCradle of Civilization Expansion§!」は§Yティムール§!に特別なシステムを追加し、地域の強力な国家にティムールの王子を王位につけたり、ティムールの遺産を請求することを可能にします。"
  dlc077_reason_tims_reason:2 "\n§Yティムール§!または彼らの従属国の一つを選択しているため、このDLCを推奨します。"
- dlc077_reason_mamluks:0 "「§YCradle of Civilization Expansion§!」はイスラム学派のような§Y中東§!や§Yイスラム教§!国家向けの機能に加え、§Yマムルーク§!政体向けの特別なシステムを追加します。"
+ dlc077_reason_mamluks:0 "「§YCradle of Civilization Expansion§!」はイスラム学派のような§Y中東§!や§Yイスラム教§!国家向けの機能に加え、§Yマムルーク§!政体向けの特別なシステムを追加します。"
  dlc077_reason_mamluks_reason:2 "\n§Yマムルーク朝§!を選択しているため、このDLCを推奨します。"
- dlc077_reason_persia:0 "「§YCradle of Civilization Expansion§!」はイスラム学派のような§Y中東§!や§Yイスラム教§!国家向けの機能に加え、§Yペルシア§!向けの新しい§Y封建神権制§!の政体のような特別なシステムを追加します。"
+ dlc077_reason_persia:0 "「§YCradle of Civilization Expansion§!」はイスラム学派のような§Y中東§!や§Yイスラム教§!国家向けの機能に加え、§Yペルシア§!向けの新しい§Y封建神権制§!の政体のような特別なシステムを追加します。"
  dlc077_reason_persia_reason:2 "\n§Yペルシア§!を建国可能な国家を選択しているため、このDLCを推奨します。"
- dlc077_reason_feudal_theocracy:0 "「§YCradle of Civilization Expansion§!」はイスラム学派のような§Y中東§!や§Yイスラム教§!国家向けの機能に加え、新しい§Y封建神権制§!の政体向けの特別なシステムを追加します。"
+ dlc077_reason_feudal_theocracy:0 "「§YCradle of Civilization Expansion§!」はイスラム学派のような§Y中東§!や§Yイスラム教§!国家向けの機能に加え、新しい§Y封建神権制§!の政体向けの特別なシステムを追加します。"
  dlc077_reason_feudal_theocracy_reason:2 "\n特別な§Y封建神権制§!の政体を持つ§Yアルダビール§!を選択しているため、このDLCを推奨します。"
- dlc077_reason_tribal_federation:0 "「§YCradle of Civilization Expansion§!」はイスラム学派のような§Y中東§!や§Yイスラム教§!国家向けの機能に加え、新しい§Y封建神権制§!の政体向けの特別なシステムを追加します。"
+ dlc077_reason_tribal_federation:0 "「§YCradle of Civilization Expansion§!」はイスラム学派のような§Y中東§!や§Yイスラム教§!国家向けの機能に加え、新しい§Y封建神権制§!の政体向けの特別なシステムを追加します。"
  dlc077_reason_tribal_federation_reason:2 "\n特別な§Y部族連邦§!の政体を持つ国家を選択しているため、このDLCを推奨します。"
- dlc078_reason_arabia:0 "「§YPeninsula Unit Pack§!」は§Yアラビア半島§!の国家向けに新しいユニットモデルとテクスチャを追加します。"
+ dlc078_reason_arabia:0 "「§YPeninsula Unit Pack§!」は§Yアラビア半島§!の国家向けに新しいユニットモデルとテクスチャを追加します。"
  dlc078_reason_arabia_reason:3 "\n§Yアラビア§!地域の国家を選択しているため、このDLCを推奨します。"
- dlc079_reason_persia:0 "「§YPersian Unit Pack§!」は§Yペルシア§!その他§Yイラン§!文化圏の国家向けに新しいユニットモデルとテクスチャを追加します。"
+ dlc079_reason_persia:0 "「§YPersian Unit Pack§!」は§Yペルシア§!その他§Yイラン§!文化圏の国家向けに新しいユニットモデルとテクスチャを追加します。"
  dlc079_reason_persia_reason:3 "\n§Yイラン§!文化グループに属する国家を選択しているため、このDLCを推奨します。"
- dlc080_reason_has_stuff:0 "「§YRivers Unit Pack§!」は§Yティグリス川§!と§Yユーフラテス川§!流域を本拠とする国家向けに新しいユニットモデルとテクスチャを追加します。"
- dlc081_reason_middle_east:0 "「§YKairi's Soundtrack 3 - Ottoman Tunes§!」は§Y中東§!のテーマに合った新しい楽曲を追加します。"
+ dlc080_reason_has_stuff:0 "「§YRivers Unit Pack§!」は§Yティグリス川§!と§Yユーフラテス川§!流域を本拠とする国家向けに新しいユニットモデルとテクスチャを追加します。"
+ dlc081_reason_middle_east:0 "「§YKairi's Soundtrack 3 - Ottoman Tunes§!」は§Y中東§!のテーマに合った新しい楽曲を追加します。"
  dlc081_reason_middle_east_reason:1 "\n§Y中東§!の国家を選択しているため、この音楽パックを推奨します。"
- dlc082_reason_iranian:2 "「§YIranian Advisor Pack§!」は§Yイラン§!の顧問用に42種類の新しい肖像を追加します。"
+ dlc082_reason_iranian:2 "「§YIranian Advisor Pack§!」は§Yイラン§!の顧問用に42種類の新しい肖像を追加します。"
  dlc082_reason_iranian_reason:2 "\n§Yイラン§!文化グループに属する国家を選択しているため、このDLCを推奨します。"
  dlc082_reason_iran_region_reason:1 "\n§Yイラン§!地方の国家を選択しているため、このDLCを推奨します。"
- dlc083_reason_muslim:1 "「§YMuslim Female Advisor Portraits Pack§!」は§Yイスラム教§!国家向けに21種類の新しい女性顧問の肖像を追加します。"
- dlc084_reason_really_generic:0 "「§YRule Britannia Immersion Pack§!」は革新性、産業革命、交易品としての石炭等の新しいゲームシステムを追加します。"
+ dlc083_reason_muslim:1 "「§YMuslim Female Advisor Portraits Pack§!」は§Yイスラム教§!国家向けに21種類の新しい女性顧問の肖像を追加します。"
+ dlc084_reason_really_generic:0 "「§YRule Britannia Immersion Pack§!」は革新性、産業革命、交易品としての石炭等の新しいゲームシステムを追加します。"
  dlc084_reason_really_generic_reason:1 "\nゲームに新機能を追加するため、このDLCを推奨します。"
- dlc084_reason_generic:0 "「§YRule Britannia Immersion Pack§!」は革新性や産業革命といった新しいゲームシステムに加え、§Yブリテン諸島§!のすべての国家向けにカスタマイズされたミッションツリー、ユニットパックと音楽を追加します。"
+ dlc084_reason_generic:0 "「§YRule Britannia Immersion Pack§!」は革新性や産業革命といった新しいゲームシステムに加え、§Yブリテン諸島§!のすべての国家向けにカスタマイズされたミッションツリー、ユニットパックと音楽を追加します。"
  dlc084_reason_generic_reason:1 "\n§Yブリテン諸島§!から国家を選択しているため、このDLCを推奨します。"
- dlc084_reason_we_rule_the_waves:0 "「§YRule Britannia Immersion Pack§!」は革新性や産業革命といった新しいゲームシステムに加え、§Yイングランド§!と§Yグレートブリテン§!向けにカスタマイズされたミッションツリー、ユニットパックと音楽を追加します。"
+ dlc084_reason_we_rule_the_waves:0 "「§YRule Britannia Immersion Pack§!」は革新性や産業革命といった新しいゲームシステムに加え、§Yイングランド§!と§Yグレートブリテン§!向けにカスタマイズされたミッションツリー、ユニットパックと音楽を追加します。"
  dlc084_reason_we_rule_the_waves_reason:1 "\n拡張で焦点が当てられている§Yイングランド§!あるいは§Yグレートブリテン§!を選択しているため、このDLCを推奨します。"
- dlc090_reason_generic:0 "「§YDharma Expansion§!」は政府改革、強化された政策システム、交易会社投資、交易中心地のアップグレード機能等の新しいゲームシステムを追加します。"
- dlc090_reason_trade_companies:0 "「§YDharma Expansion§!」は強化された政府改革システムや、交易中心地のアップデート機能のような交易会社向けの新しいゲームシステムを追加します。"
+ dlc090_reason_generic:0 "「§YDharma Expansion§!」は政府改革、強化された政策システム、交易会社投資、交易中心地のアップグレード機能等の新しいゲームシステムを追加します。"
+ dlc090_reason_trade_companies:0 "「§YDharma Expansion§!」は強化された政府改革システムや、交易中心地のアップデート機能のような交易会社向けの新しいゲームシステムを追加します。"
  dlc090_reason_trade_companies_reason:1 "\n植民地帝国を達成するのに適した国家を選択しているため、このDLCを推奨します。"
- dlc090_reason_indian:0 "「§YDharma Expansion§!」はカスタマイズされたミッションツリーや政府改革、階級等の§Yインド§!向けの新しいゲームコンテンツを追加します。"
- dlc090_reason_mughals:0 "「§YDharma Expansion§!」は強化された政府改革と交易会社のシステムに加え、§Yムガル§!向けの固有の政体も追加します。"
+ dlc090_reason_indian:0 "「§YDharma Expansion§!」はカスタマイズされたミッションツリーや政府改革、階級等の§Yインド§!向けの新しいゲームコンテンツを追加します。"
+ dlc090_reason_mughals:0 "「§YDharma Expansion§!」は強化された政府改革と交易会社のシステムに加え、§Yムガル§!向けの固有の政体も追加します。"
  dlc090_reason_mughals_reason:1 "\n§Yムガル§!建国に適した国家を選択しているため、このDLCを推奨します。"
- dlc091_reason_indian_hindu:0 "「§YHindu Unit Pack§!」は§Yインドのヒンドゥー教§!国家向けに新しい軍隊モデルを追加します。"
+ dlc091_reason_indian_hindu:0 "「§YHindu Unit Pack§!」は§Yインドのヒンドゥー教§!国家向けに新しい軍隊モデルを追加します。"
  dlc091_reason_indian_hindu_reason:1 "\n§Yインド§!にある§Yヒンドゥー教§!の国家を選択しているため、このユニットパックを推奨します。"
- dlc092_reason_indian_muslim:0 "「§YIndian Sultanate Unit Pack§!」は§Yインドのイスラム教§!国家向けに新しい軍隊モデルを追加します。"
+ dlc092_reason_indian_muslim:0 "「§YIndian Sultanate Unit Pack§!」は§Yインドのイスラム教§!国家向けに新しい軍隊モデルを追加します。"
  dlc092_reason_indian_muslim_reason:1 "\n§Yインド§!にある§Yイスラム教§!の国家を選択しているため、このユニットパックを推奨します。"
- dlc093_reason_india:0 "「§YDharma Advisor Portraits Pack§!」は§Yインド§!国家及び文化向けに42種類の新しい顧問の肖像を追加します。"
- dlc094_reason_india:0 "「§YDharma Music Pack§!」は§Yインド§!の音や伝統からインスピレーションを得た新しいオリジナル楽曲を追加します。"
- dlc095_reason_iberian:0 "「§YGolden Century Immersion Pack§!」は修道会、拡張されたミッションツリー、新しいユニットと船舶モデル等の§Yイベリア§!国家向けの新しいコンテンツを追加します。"
+ dlc093_reason_india:0 "「§YDharma Advisor Portraits Pack§!」は§Yインド§!国家及び文化向けに42種類の新しい顧問の肖像を追加します。"
+ dlc094_reason_india:0 "「§YDharma Music Pack§!」は§Yインド§!の音や伝統からインスピレーションを得た新しいオリジナル楽曲を追加します。"
+ dlc095_reason_iberian:0 "「§YGolden Century Immersion Pack§!」は修道会、拡張されたミッションツリー、新しいユニットと船舶モデル等の§Yイベリア§!国家向けの新しいコンテンツを追加します。"
  dlc095_reason_iberian_reason:1 "\n§Yイベリア§!国家を選択しているため、このDLCを推奨します。"
- dlc095_reason_pirates:0 "「§YGolden Century Immersion Pack§!」は、海賊共和国とそれに付随するシステム及びユニットモデルをゲームに追加します。"
+ dlc095_reason_pirates:0 "「§YGolden Century Immersion Pack§!」は、海賊共和国とそれに付随するシステム及びユニットモデルをゲームに追加します。"
  dlc095_reason_pirates_reason:1 "\n特定の選択が行われた場合に海賊共和国となる可能性のある国家を選択しているため、このDLCを推奨します。"
  dlc095_reason_pirates_decision_reason:1 "\nゲーム開始後、早期に海賊共和国となる可能性がある§Yパレンバン§!を選択しているため、このDLCを推奨します。"
- dlc095_reason_maghreb:0 "「§YGolden Century Immersion Pack§!」は拡張されたミッションツリー、新しい船舶モデル、特定の決断がなされた場合に海賊共和国を建国する機能等の、マグリブ国家向けの新しいコンテンツを追加します。"
+ dlc095_reason_maghreb:0 "「§YGolden Century Immersion Pack§!」は拡張されたミッションツリー、新しい船舶モデル、特定の決断がなされた場合に海賊共和国を建国する機能等の、§Yマグリブ§!国家向けの新しいコンテンツを追加します。"
  dlc095_reason_maghreb_reason:1 "\n§Yマグリブ§!地方の国家を選択しているため、このDLCを推奨します。"
- dlc072_reason_orthodox:0 "「§YThird Rome Immersion Pack§!」は§Y正教会§!の国家向けに、信仰心、聖像、高開発度の州への主教座の奉献機能といった新しいシステムを追加します。"
+ dlc072_reason_orthodox:0 "「§YThird Rome Immersion Pack§!」は§Y正教会§!の国家向けに、信仰心、聖像、高開発度の州への主教座の奉献機能といった新しいシステムを追加します。"
  dlc072_reason_orthodox_reason:1 "\n§Y正教会§!の国家を選択しているため、このDLCを推奨します。"
- dlc060_reason_prussia:0 "「§YRights of Man Expansion§!」は列強や退位、君主の個性といった機能に加え、§Yプロイセン§!政体に特別なシステムを追加します。"
+ dlc060_reason_prussia:0 "「§YRights of Man Expansion§!」は列強や退位、君主の個性といった機能に加え、§Yプロイセン§!政体に特別なシステムを追加します。"
  dlc060_reason_prussia_reason:1 "\n§Yプロイセン§!を選択しているため、このDLCを推奨します。"
  dlc060_reason_prussia_reason2:1 "\n§Yプロイセン§!を建国可能な国家を選択しているため、このDLCを推奨します。"
- dlc090_reason_missions_tau:0 "「§YDharma Expansion§!」は強化された政策システムや交易中心地のアップグレード機能に加え、§Yタウングー§!向けに新しいミッションツリーを追加します。"
+ dlc090_reason_missions_tau:0 "「§YDharma Expansion§!」は強化された政策システムや交易中心地のアップグレード機能に加え、§Yタウングー§!向けに新しいミッションツリーを追加します。"
  dlc090_reason_missions_tau_reason:1 "\n§Yタウングー§!を選択しているため、このDLCを推奨します。"
  dlc090_reason_missions_tim:0 "「§YDharma Expansion§!」は強化された政策システムや交易中心地のアップグレード機能に加え、§Yティムール§!向けに新しいミッションツリーを追加します。"
  dlc090_reason_missions_tim_reason:1 "\n§Yティムール朝§!を選択しているため、このDLCを推奨します。"
