Save/Update files [ci skip]

--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -542,7 +542,7 @@
  spices:0 "香辛料"
  spicesDESC:0 "香辛料は主にそれらの薬用価値と、食品の味を改善する力によって、古くからヨーロッパで知られていた。胡椒、生姜、ナツメグ、唐辛子、シナモンなどである。それらは一部は東アフリカから、しかしほとんどはインド、中国、香料諸島（現在のインドネシア）からやって来て、アレクサンドリアや、その他大隊商道の終点で取引された。ヨーロッパ人たちのより安く、より直接的な供給をという願望はポルトガルによる初期の東方への航海の主な原動力となった。"
  sugar:0 "砂糖"
- sugarDESC:0 "砂糖は甘味料としてだけではなく、食品の保存にも使用された。サトウキビはこの時点では砂糖を得るための唯一の手段であり、最初は地中海の島で栽培されていた。しかし、アメリカ大陸、特にカリブ海での労働力を集約する大規模農園によって、主要な生産減はすぐに海外へと移るであろう。"
+ sugarDESC:0 "砂糖は甘味料としてだけではなく、食品の保存にも使用された。サトウキビはこの時点では砂糖を得るための唯一の手段であり、最初は地中海の島で栽培されていた。しかし、アメリカ大陸、特にカリブ海での労働力を集約する大規模農園によって、主要な生産源はすぐに海外へと移るであろう。"
  tea:0 "茶"
  teaDESC:0 "茶は、中国、インド、および東南アジアにおいて重要で贅沢な飲み物であった。それはしばしば宗教的、社会的な儀式で使用された。ヨーロッパに茶を普及させたのはイギリス人である。まだ世界的な供給が少なかったことから、単に大きな利益を生み出すだけで、コーヒーのように高貴な飲み物であるとは考えられることはなかった。"
  tobacco:0 "タバコ"
@@ -4417,8 +4417,8 @@
  HAVE_MORE_SAILORPERCENT_THAN:0 "水兵レベルが右記以上である："
  custom_idea_global_sailors_modifier:0 "農民の水兵たち"
  custom_idea_global_sailors_modifier_desc:0 "あなたが富んでいるか貧しいかにかかわらず、あなたは常に船上で命令に従うことができる。農民を徴兵することは最高の水兵を生み出すことはできないかもしれないが、彼らは少なくとも自然に補給可能な資源である。"
- HAVE_LESS_BACKINGISSUEPERCENT_THAN:0 "我々の現在の問題を支持している議会の議席が右記未満である："
- HAVE_MORE_BACKINGISSUEPERCENT_THAN:0 "我々の現在の問題を支持している議会の議席が右記以上である："
+ HAVE_LESS_BACKINGISSUEPERCENT_THAN:0 "我々の現在の議題を支持している議会の議席が右記未満である："
+ HAVE_MORE_BACKINGISSUEPERCENT_THAN:0 "我々の現在の議題を支持している議会の議席が右記以上である："
  THEIR_PRIMARY_CULTURE:0 "彼らの主要文化は§Y$CULTURE$§Wです。§Y$CULTURE$§Wは§Y$GROUP$§Wグループに属します。"
  OUR_PRIMARY_CULTURE:0 "我々の主要文化は§Y$CULTURE$§Wです。§Y$CULTURE$§Wは§Y$GROUP$§Wグループに属します。"
  THEIR_SECONDARY_CULTURE:0 "彼らはまた以下の文化を容認します："
